--- a/ethereum/0. ethereum-privnet.md
+++ b/ethereum/0. ethereum-privnet.md
@@ -91,10 +91,11 @@ geth --datadir ~/eth_private_net init ~/eth_private_net/myGenesis.json
 
 ## geth ノードの起動
 
-この例では networkid は15
+この例では networkid は15 でhttpでの接続を許可します．
+さらにセキュリティ的に問題ですがIPCでのアンロックを許可しています．
 
 ```bash
-geth --networkid "15" --nodiscover --datadir "~/eth_private_net"
+geth --networkid "15" --nodiscover --datadir "~/eth_private_net" --http --http.addr "0.0.0.0" --allow-insecure-unlock
 ```
 
 geth ノードのプロセスの停止は，専用コマンドは無いのでプロセスを kill して停止します．
@@ -149,9 +150,9 @@ To exit, press ctrl-d or type exit
 
 * personal.newAccount(パスワード)：アカウントを作成
 * personal.unlockAccount()：アカウントのロックを解除
-* eth.accounts：システムのアカウントを列挙
+* eth.accounts：システムの鍵管理部にあるアカウントを列挙
 * eth.getBalance() ：アカウントの残高
-* eth.blockNumber：ブロックの総数
+* eth.blockNumber()：ブロックの総数
 * eth.getTransaction() ：トランザクションを取得
 * eth.getBlock()：ブロックを取得
 * miner.start()：マイニングを開始
@@ -332,7 +333,7 @@ true
 
 ### 送金トランザクションの作成
 
-送金の単位は Wei (10の18乗倍）
+送金の単位は Wei (10の18乗倍すると Ether になる）
 
 ```json
 > eth.sendTransaction({from: alice, to: bob, value: 100000})
