--- a/bitcoin/2.bitcoin-core-details.md
+++ b/bitcoin/2.bitcoin-core-details.md
@@ -1,6 +1,6 @@
 # 2. bitcoin core の詳細
 
-2022/05/15更新 Shigeichiro Yamasaki
+2023/04/02 更新 Shigeichiro Yamasaki
 
 ## ビットコイン開発コミュニティとBIP
 
@@ -44,13 +44,11 @@
 
 #### ビットコインアドレスを５つ生成する
 
+ワレットが一つの場合は -rpcwallet=<filename> オプションは不要です
 ```bash
-bitcoin-core.cli getnewaddress
+bitcoin-core.cli -rpcwallet=<filename> getnewaddress
 =>
 tb1qz9qum0j3th39wfmqsevyu59kmffmhsu69agu33
-
-...
-
 ```
 
 #### 使用するUTXOを確認する
