--- a/ethereum/2. ethereum-testnet.md
+++ b/ethereum/2. ethereum-testnet.md
@@ -1,45 +1,48 @@
-# 1. Ethereum testnetノード構築
+# 2. Ethereum testnet接続
 
-2023/01/05 更新 Shigeichiro Yamasaki
+2023/02/06 更新 Shigeichiro Yamasaki
 
-## Ethereum ノードの基本構成
+## Ethereum ネットワークの基本
 
-* P2Pネットワーク　（Ethereumメインネット、Ethereumテストネット)
-* node (Ethreumクライアント）
-  * EVM (「スマートコントラクト」と呼ばれるプログラムのバイトコード処理系でEthereumネットワーク全体で同期した（シングルトン）状態マシンとなる）
-  * データベース（システムの状態をマークルパトリシアツリーとしてデータ構造で管理）
-  * 実装（Geth, Parityなど）
-* ワレット、DAppブラウザ　（MetaMaskなど）
-  * Ethereumネットワークへの操作を行うソフト
-
-## 予備知識
+* パブリックなP2Pネットワーク
+    * mainnet 実際に価値のある Ethereum 仮想通貨システム
+    * testnet 研究開発用のネットワーク
+    * 複数のtestnet が存在する
+        * コンセンサスアルゴリズムの違いなどがある
 
 ### The Merge
 
-Ethereumのメインネットは、PoWからPoSに移行しました。
-その移行のことを The Merge と呼んでいます。
+Ethereumのメインネットは、2022年9月15日にPoWからPoSに移行した
+その移行のことを The Merge と呼んでいる
 
-### ２つのEthereumクライアント(The merge以降）
+### ２種類のEthereumクライアントノード(The merge以降）
 
-* Ethereumクライアントには、実行クライアントとコンセンサスクライアントがあります。
-* gethは実行クライアントです。
-* gethをEthereum ノードとして稼働させるためにはコンセンサスクライアントとの接続が必要です
+The Merge 以前は geth などの実行クライアントだけで Ethereum ノードが運用されていたが，The Merege 以降は，コンセンサスクライアントが必要になった．
+
+* gethをEthereum ノードとして稼働させるためにはコンセンサスクライアントとの接続が必要
 * JSON-RPC ポート8545への外部トラフィックをブロックするように構成されていることを前提としています
 
 
-### Ethrerumテストネットワークの種類
+### Ethereum testnet の種類
 
-* Görli: Proof-of-authority test network
+* Görli: （PoA）Proof-of-authority test network
+* Sepolia: proof-of-work test network
 
 ### コンセンサスクライアント
-
-The merge 以降，Gethだけでは Ethereumノードはチェーンを検証できなくなり，コンセンサスクライアントを必要とするようになりました．
 
 * Lighthouse: Rust実装
 * Nimbus: Nim実装
 * Prysm: Go実装
 * Teku: Java実装
 * Lodestar : Typescript 実装
+
+
+## Geth + Prysm でGörliに接続する
+
+
+
+
+
 
 ## ethereum (Geth) インストール手順
 
