--- a/ethereum/6. ethereum-Truffle .md
+++ b/ethereum/6. ethereum-Truffle .md
@@ -1,6 +1,6 @@
 # Truffle （トリュフ）を使ったSolidity スマートコントラクト開発
 
-2022/05/18更新　Shigeichiro Yamasaki
+2023/04/18更新　Shigeichiro Yamasaki
 
 Solidity フレームワークのTruffleを利用したスマートコントラクト開発
 
@@ -12,40 +12,48 @@ Solidityのテスト駆動開発とデプロイ
 
 ## 環境
 
-Ubuntu 20.04 /MacOSX
-nvm : 0.39.0
-node : 16.13.2
-npm : 8.1.2
-Truffle v5.4.30 (core: 5.4.30)
-Solidity - 0.8.11 (solc-js)
-Node v16.13.2
-Web3.js v1.5.3
-Ganache
+Ubuntu 22.04LTS /MacOSX
+nvm : 0.39.3
+node : v18.16.0
+npm :9.6.4
+Truffle v5.8.2 (core: 5.8.2)
+Ganache v7.7.7
+Solidity v0.5.16 (solc-js)
+Node v18.16.0
+Web3.js v1.8.2
 
 ## Truffleインストール
 
 ### nvm (ubuntu)のインストール
 
-```
+```bash
 sudo apt install curl 
-
 curl https://raw.githubusercontent.com/creationix/nvm/master/install.sh | bash
 source ~/.profile
 ```
 
 ### nvm (macOSX)のインストール
 
-```
+```bash
 source $(brew --prefix nvm)/nvm.sh
 echo 'source $(brew --prefix nvm)/nvm.sh' >> ~/.zprofile
 source ~/.zprofile
 ```
 
+### Node.jsのインストール
+
+```bash
+// node.js のインストール
+nvm install 18 
+nvm use 18
+```
+
 ### Truffleのインストール
 
-```
-nvm install 16.13.2 # DO NOT USE >=17.0.0
-nvm use 16.13.2
+```bash
+// npmのバージョンアップ
+npm install -g npm@9.6.4
+// Truffleのインストール
 npm i -g truffle  # DO NOT USE sudo
 ```
 
@@ -84,19 +92,14 @@ npm install -g ganache-cli
 
 #### 作業ディレクトリの作成
 
-```
+```bash
 mkdir greeter
 cd greeter
-
-# 作成したディレクトリの確認
-ls
-contracts		migrations		test			truffle-config.js
-
 ```
 
 ### Truffle によるテンプレートの生成
 
-```
+```bash
 truffle init
 
 # yと応える
@@ -104,7 +107,9 @@ truffle init
 
 #### truffleによって作成されたディレクトリとファイルの確認
 
-```
+```bash
+tree 
+.
 ├── contracts
 ├── migrations
 ├── test
@@ -120,10 +125,22 @@ truffle init
 
 スマートコントラクト (Solidity) だけでなく、テストやデプロイのためのプログラム(JavaScript) も自動生成してくれる
 
-```
+```bash
 truffle create contract Greeter
 truffle create test Greeter
 truffle create migration Greeter
+```
+
+```bash
+tree
+.
+├── contracts
+│   └── Greeter.sol
+├── migrations
+│   └── 1681826524_greeter.js
+├── test
+│   └── greeter.js
+└── truffle-config.js
 ```
 
 #### 生成されたテンプレート
