--- a/bitcoin/0.bitcoin-core-signet.md
+++ b/bitcoin/0.bitcoin-core-signet.md
@@ -1,13 +1,12 @@
 # 0. Bitcoin core Signet ノードの構築
 
-2023/04/01 更新 Shigeichiro Yamasaki
+2023/05/04  更新 Shigeichiro Yamasaki
 
 ## install 方法
 
-
 ### MacOSXの場合
 
-[Bitcoin core ダウンロードサイト](https://bitcoin.org/ja/download)から dmg 形式のインストーラをダウンロードする
+[Bitcoin core ダウンロードサイト](https://bitcoincore.org/bin/)からapple のdmg 形式のインストーラをダウンロードする
 
 
 #### インストーラで bitcoin core をインストールしてアプリを起動
@@ -26,7 +25,7 @@ bitcon coreは「危険なアプリ」という扱いになっています。
 
 --
 
-### ubuntu 20.04LTS/の場合
+### ubuntu 22.04LTS/の場合
 
 #### snap でインストールする
 
@@ -42,11 +41,16 @@ sudo snap install bitcoin-core
 bitcoin-core.qt
 ```
 
-コマンドで実行する場合
+ファイルメニューでアプリをプロセスを終了させる
+
+#### bitcoind を起動してみる
+
 
 ```bash
-bitcoin-core.daemon &
+bitcoin-core.daemon 
 ```
+
+<control>-c でプロセスを終了させる
 
 #### snap で bitcoin core をインストールしたときのコマンドインターフェース
 
@@ -71,6 +75,18 @@ bitcoin.confの場所
 
 ####  bitcoin.conf を編集
 
+MacOSX 
+
+```bash
+nano ~/Library/Application Support/Bitcoin/bitcoin.conf
+```
+
+ubuntuでsnapでインストールした場合
+
+```bash
+nano ~/snap/bitcoin-core/common/.bitcoin/bitcoin.conf
+```
+
 ##### bitcoin-qtの場合
 
 * MacOSX :「ファイル」メニューの 「preferences」.. 
@@ -78,9 +94,6 @@ bitcoin.confの場所
 * 「設定ファイルを開く」ボタンをクリック
 * 設定ファイルを以下のように作成して保存
 
-
-
-`nano bitcoin.conf`
 
 ```
 signet=1
@@ -96,24 +109,23 @@ port=38333
 fallbackfee=0.00002
 ```
 
-* 「OK」をクリック
+保存して終了
 
-#### bitcoind の停止
-
-bitcoin-qtはメニューから停止
-
-コマンドで実行する場合
+### bitcoind の起動
 
 ```bash
-bitcoin-core.cli stop
+bitcoin-core.daemon &
 ```
+同期が完了するまで時間がかかります
 
+### 同期状態の確認
 
-#### 確認
+同期したブロック高
 
-アイコンが薄い黄緑になっていれば成功
+```bash
+bitcoin-core.cli getblockcount
 
-* bitcoin-qt で自分のワレットの作成しておく
+```
 
 ### bitcoin-core.cli でのワレット生成の注意
 
@@ -124,7 +136,13 @@ bitcoin-core.cli stop
 ### レガシーワレットの作成
 
 ```bash
-bitcoin-core.cli -named createwallet wallet_name=＜ワレット名＞ descriptors=false
+bitcoin-core.cli -named createwallet wallet_name=alice descriptors=false
+```
+
+### アドレスの生成
+
+```bash
+bitcoin-core.cli -rpcwallet=alice getnewaddress 
 ```
 
 ## テスト用コインの入手
