--- a/bitcoin/0.bitcoin-core-signet.md
+++ b/bitcoin/0.bitcoin-core-signet.md
@@ -73,7 +73,7 @@ bitcoin.confの場所
     * ~/Library/Application Support/Bitcoin/bitcoin.conf
 
 
-####  bitcoin.conf を編集
+###  bitcoin.conf を編集
 
 MacOSX 
 
@@ -87,7 +87,7 @@ ubuntuでsnapでインストールした場合
 nano ~/snap/bitcoin-core/common/.bitcoin/bitcoin.conf
 ```
 
-##### bitcoin-qtの場合
+#### bitcoin-qtの場合
 
 * MacOSX :「ファイル」メニューの 「preferences」.. 
 * ubuntu: 「設定」メニューの「オプション」
@@ -111,41 +111,68 @@ fallbackfee=0.00002
 
 保存して終了
 
-### bitcoind の起動
+## bitcoind の起動
 
 ```bash
 bitcoin-core.daemon &
 ```
 同期が完了するまで時間がかかります
 
-### 同期状態の確認
+## 同期状態の確認
 
 同期したブロック高
 
 ```bash
 bitcoin-core.cli getblockcount
-
 ```
 
-### bitcoin-core.cli でのワレット生成の注意
+ ブロックチェーンの同期にはかなりの時間がかかります
 
-アカウントの秘密鍵が必要な場合、createwallet のデフォルトの設定では不可能な状態になってしまいます。
+## bitcoinワレットの作成
 
-秘密鍵を取り出し可能なワレットの生成
+bitcoin-core には bitcoin ワレットの機能があります．
+bitcoinを受領したり送金したりするためにはワレットが必要です．
 
 ### レガシーワレットの作成
+
+学習用に古い仕様のワレットを使用します．（新しい仕様のワレットは安全性が高くなっていますが，秘密鍵の取り出しなどができません）
+
+ここではワレット名を alice としています．
+自分の名前などに変更することができます．
 
 ```bash
 bitcoin-core.cli -named createwallet wallet_name=alice descriptors=false
 ```
 
-### アドレスの生成
+### ワレットの情報が格納されている場所
+
+ubuntuの signet 場合
 
 ```bash
-bitcoin-core.cli -rpcwallet=alice getnewaddress 
+cd ~/snap/bitcoin-core/common/.bitcoin/signet/wallets
+
+ls
+=>
+alice
+```
+
+### アドレスの生成
+
+tb1 で始まる文字列があなたのアドレスです．
+
+```bash
+bitcoin-core.cli getnewaddress
+
+=>
+tb1qa0gknzlqcx2mz54myqvxl8ev3h2w6lswqw4gvj
 ```
 
 ## テスト用コインの入手
+
+以下のURLから signet ネットワークの bitcoin （無料）を入手できます．
+ただし，同じグローバルIPアドレスからは24時間に1回しか受け取ることができません．
+大学などのネットワーク環境では全員が一つのグローバルIPアドレスを共有しているので，24時間に一人しか受け取ることができません．
+自宅などからトライしてください．
 
 [https://signet.bc-2.jp/](https://signet.bc-2.jp/)
 
