--- a/bitcoin/4.bitcoin-SegWit.md
+++ b/bitcoin/4.bitcoin-SegWit.md
@@ -1,7 +1,7 @@
 # 4. SegWit (Segregated Witness)
 
 
-2022/12/01 更新 Shigeichiro Yamasaki
+2023/05/05 更新 Shigeichiro Yamasaki
 
 SegWitトランザクションの内容の復習です。
 bitcoinrb での操作を確認しておきましょう。
@@ -74,26 +74,71 @@ bitcoinrb での操作を確認しておきましょう。
 
 
 
-# bitcoinrb での実装
+## bitcoinrb での実装
 
-## address
+### bitcoin core RPC API の利用
 
-```ruby
-addrAlice="tb1qm5gqhe7e46jhyy2ca00x66slmrlljwa3m476sr"
-addrBob="tb1qm5gqhe7e46jhyy2ca00x66slmrlljwa3m476sr"
-```
-
-## AliceとBobの鍵
+signetを利用する場合です
 
 ```ruby
+#  共通部分
 require 'bitcoin'
-
-privAlice='cNz434p392FXbmm2ZH2p9eaVDg5YfvANuFM1hHqf8bmRUZ3SSSAp'
-privBob='cUpy2Z19AC22MnGLNBfrNMZqrbz7v7rtL9UByzMoxqGC4v9SKtFf'
-
-keyAlice=Bitcoin::Key.new(priv_key: privAlice)
-keyBob=Bitcoin::Key.new(priv_key: privBob)
+require 'net/http'
+require 'json'
+include Bitcoin
+include Bitcoin::Opcodes
+Bitcoin.chain_params = :signet
+HOST="localhost"
+PORT=38332          # mainnetの場合は 8332
+RPCUSER="hoge"      # bitcoin core RPCユーザ名
+RPCPASSWORD="hoge"  # bitcoin core パスワード
+FEE = 0.00002       # 手数料
+# bitcoin core RPC を利用するメソッド
+def bitcoinRPC(method, params)
+    http = Net::HTTP.new(HOST, PORT)
+    request = Net::HTTP::Post.new('/')
+    request.basic_auth(RPCUSER, RPCPASSWORD)
+    request.content_type = 'application/json'
+    request.body = { method: method, params: params, id: 'jsonrpc' }.to_json
+    JSON.parse(http.request(request).body)["result"]
+end
 ```
+
+確認
+
+```ruby
+bitcoinRPC('getbalance', [])
+```
+
+### テスト用アカウントと鍵
+
+ここでは，以下の秘密鍵からアカウントを生成するので，このままコピー・ペーストして確認してください
+
+```ruby
+# テスト用アカウントと鍵
+# テスト用の秘密鍵（WIF形式）
+priv_alice = "cTzEHTNYQQ2PGLJWFkXdpxHm3B8kuU7yN3c5b5ZkSWzUY6j3ZW5B"
+priv_bob   = "cUTymPpf51Y1Q8hddD93kSqVahkdFQJXWCuMgY8ctHJqbermrXPK"
+priv_carol = "cRaww9WmBUogesd6vEBBi4A24yZdxSMQT75FJ9ZQTqWtpRJSTG2f"
+priv_david = "cSHFCDprZSsp423BG8brHReK7FG4CNifJYZvgcZ6N6QchcxEgyDp"
+# 鍵オブジェクトの復元(WIF形式の秘密鍵から生成）
+keyAlice = Bitcoin::Key.from_wif(priv_alice)
+keyBob   = Bitcoin::Key.from_wif(priv_bob)
+keyCarol = Bitcoin::Key.from_wif(priv_carol)
+keyDavid = Bitcoin::Key.from_wif(priv_david)
+## アドレス
+alice = keyAlice.to_p2wpkh
+bob   = keyBob.to_p2wpkh
+carol = keyCarol.to_p2wpkh
+david = keyDavid.to_p2wpkh
+# 公開鍵
+pub_alice = keyAlice.pubkey
+pub_bob   = keyBob.pubkey
+pub_carol = keyCarol.pubkey
+pub_david = keyDavid.pubkey
+
+```
+
 
 ## UTXO (P2WSH)
 
