--- a/bitcoin/0.bitcoin-core-signet.md
+++ b/bitcoin/0.bitcoin-core-signet.md
@@ -1,6 +1,6 @@
 # 0. Bitcoin core Signet ノードの構築
 
-2023/05/04  更新 Shigeichiro Yamasaki
+2023/05/09  更新 Shigeichiro Yamasaki
 
 ## install 方法
 
@@ -126,7 +126,8 @@ bitcoin-core.daemon &
 bitcoin-core.cli getblockcount
 ```
 
- ブロックチェーンの同期にはかなりの時間がかかります
+ ブロックチェーンの同期にはすこし時間がかかります.
+マシンの性能に依存しますが，最近の一般的な性能のマシンならsignet の場合30分程度でしょう．
 
 ## bitcoinワレットの作成
 
@@ -166,6 +167,8 @@ bitcoin-core.cli getnewaddress
 =>
 tb1qa0gknzlqcx2mz54myqvxl8ev3h2w6lswqw4gvj
 ```
+
+★ 一つのワレットの中に，アドレスはいくつでも生成することができます．
 
 ## テスト用コインの入手
 
