--- a/bitcoin/1.bitcoin-core-basic.md
+++ b/bitcoin/1.bitcoin-core-basic.md
@@ -202,6 +202,15 @@ bitcoin-core.cli loadwallet alice
 
 #### ビットコインアドレスの生成
 
+コマンドの文法
+
+```
+getnewaddress
+```
+
+★ 自分のワレットの中にアドレスはいくつでも生成できます．
+★ アドレスの生成と同時に，対応する秘密鍵と公開鍵も生成されています．
+
 ```bash
 # aliceの場合
 bitcoin-core.cli  getnewaddress
@@ -261,6 +270,8 @@ getaddressinfo <ビットコインアドレス>
 }
 ```
 
+実際に自分のアドレスの情報を確認してみてください
+
 ```bash
 # 実行例
 bitcoin-core.cli getaddressinfo tb1q80pa4rrsv3vk7mg6uvm5gm5vsdzzy2ukl8n5v6
@@ -297,6 +308,8 @@ bitcoin-core.cli getaddressinfo tb1q80pa4rrsv3vk7mg6uvm5gm5vsdzzy2ukl8n5v6
 ```bash
 dumpprivkey   <ビットコインアドレス>
 ```
+
+実際に自分のアドレスの秘密鍵を確認してみてください
 
 ```bash
 # 実行例
