--- a/bitcoin/2.bitcoin-core-details.md
+++ b/bitcoin/2.bitcoin-core-details.md
@@ -1,6 +1,6 @@
 # 2. bitcoin core の詳細
 
-2023/05/05  更新 Shigeichiro Yamasaki
+2023/05/09  更新 Shigeichiro Yamasaki
 
 ## ビットコイン開発コミュニティとBIP
 
@@ -24,11 +24,11 @@
 
 1. faucetから得たUTXOをinputとして6個のoutputを持つトランザクション (TX1) を作成し，署名して，ブロードキャストする
 
-2. 5個のUTXOからそれぞれP2PK, P2PKH, P2SH, P2WPKH, P2WSH の５つのタイプのoutputを持つ5個のトランザクション(TX2 ~ TX6) を作成し，それぞれ署名して，ブロードキャストする
-    3.1. P2PK のoutput を持つトランザクションの作成はバイナリ形式で作成する必要があります
+2. ５個のUTXOを利用して，P2PK, P2PKH, P2SH, P2WPKH, P2WSH の５つのタイプのoutputを持つ5個のトランザクション(TX2 ~ TX6) を作成し，それぞれ署名して，ブロードキャストする
+    ★ P2PK のoutput を持つトランザクションの作成はバイナリ形式で作成する必要があります
 
 3. 5個のタイプの異なるUTXOをinputとするトランザクション (TX7) を作成
-    3.1 P2SH, P2WSH のUTXOをワレットに認識させる必要があります。
+    ★ P2SH, P2WSH のUTXOをワレットに認識させる必要があります。
 
 4. トランザクション(TX7)に署名してブロードキャスト
 
@@ -47,6 +47,8 @@
 * ワレットが一つの場合は -rpcwallet=<filename> オプションは不要です
 * 文法は，getnewaddress ( "label" "address_type" )
 * address_type には，"legacy", "p2sh-segwit", "bech32", a"bech32m" があります．legacy (p2pkh), bech32 (p2wpkh) ．
+
+★ 以下のアドレスは例です．それぞれ自分でアドレスを生成してください
 
 ```bash
 bitcoin-core.cli  getnewaddress bob bech32
@@ -70,7 +72,9 @@ bitcoin-core.cli  getnewaddress franc bech32
 tb1qwj3duktjj52jcj5089xgfkw5dlw4k9fn2xm729
 ```
 
-生成したアドレスの例
+### 生成したアドレスをメモしてください
+
+この文書の例では以下のようになっていますが，実際には自分で生成したアドレスを利用します．
 
 * bob: tb1qr8nw62s3r0pgc5t6devcstmw3e2t3959m6tlly
 * carol: tb1qy0z6vfy7q03hhzcmqcqjfj550av6q2crptcvnk
@@ -109,8 +113,8 @@ bitcoin-core.cli  listunspent
 
 ### この例のUTXOの場合
 
-UTXO が一つしかないので，以下のようになります．
-一般的には複数のUTXOがあります．
+この例では UTXO が一つしかないので，以下のようになります．
+一般的には複数のUTXOがあります．ので，0.002 以上の資金を持つUTXOを選んでください．
 
 * txid: a9782e5dcf0f5d39dfa5fd4d4df70c45b0d1fbf61f2f6a068f3a3e2deab57819
 * vout: 1
