--- a/tapyrus/2. tapyrusrb.md
+++ b/tapyrus/2. tapyrusrb.md
@@ -1,6 +1,6 @@
 # tapyrusrb
 
-最終更新 2022/12/24 Shigeichiro Yamasaki
+最終更新 2023/07/05 Shigeichiro Yamasaki
 
 Tapyrus API をRuby から操作する rubygemsの基本
 
@@ -45,6 +45,9 @@ gem install tapyrus
 
 ### tapyrus RPC
 
+```bash
+irb
+```
 
 ```ruby
 require 'tapyrus'
@@ -57,7 +60,7 @@ FEE = 0.00002       # 手数料
 Tapyrus.chain_params = :prod
 
 # tapyrus-cli コマンドのフルパス
-Tapyrus_cli ='~/tapyrus-core-0.5.1/bin/tapyrus-cli'
+Tapyrus_cli ='~/tapyrus-core-0.5.2/bin/tapyrus-cli'
 
 # RPC
 def tapyrusRPC(method,params)
@@ -118,12 +121,19 @@ pub_franck = keyFranck.pub
 
 ### 自分のワレットの秘密鍵をインポートする
 
+時間がかかるが，一つずつ実行する
+
 ```ruby
 tapyrusRPC('importprivkey',[keyAlice.key.to_wif])
+
 tapyrusRPC('importprivkey',[keyBob.key.to_wif])
+
 tapyrusRPC('importprivkey',[keyCarol.key.to_wif])
+
 tapyrusRPC('importprivkey',[keyDavid.key.to_wif])
+
 tapyrusRPC('importprivkey',[keyErza.key.to_wif])
+
 tapyrusRPC('importprivkey',[keyFranck.key.to_wif])
 
 ```
@@ -153,15 +163,15 @@ tx = tapyrusRPC('gettransaction',[txid])
 
 ```ruby
 def newutxo(amount)
-    address=tapyrusRPC('getnewaddress',["user#{rand(10000)}"])
+    address=tapyrusRPC('getnewaddress',["user#{rand(10000)}"]).chomp
     txid=tapyrusRPC('sendtoaddress',[address, amount])
     puts txid
 end
 
-6.times do newutxo(0.1) end
+6.times do newutxo(0.0001) end
 
 # 20分後(10分後ではまだUTXOになっていません）
-50.times do newutxo(0.01) end
+50.times do newutxo(0.0001) end
 
 # さらに10分待つ
 ```
