--- a/tapyrus/3. tapyrusrb-P2SH.md
+++ b/tapyrus/3. tapyrusrb-P2SH.md
@@ -1,6 +1,6 @@
 # tapyrusrbでP2SHを実装
 
-2022/12/21 更新 Shigeichiro Yamasaki
+2023/07/05 更新 Shigeichiro Yamasaki
 
 tapyrus でスマートコントラクトを記述するときの基本は P2SH です
 
@@ -24,7 +24,7 @@ FEE = 0.00002       # 手数料
 Tapyrus.chain_params = :prod
 
 # tapyrus-cli コマンドのフルパス
-Tapyrus_cli ='~/tapyrus-core-0.5.1/bin/tapyrus-cli'
+Tapyrus_cli ='~/tapyrus-core-0.5.2/bin/tapyrus-cli'
 
 # RPC
 def tapyrusRPC(method,params)
@@ -69,6 +69,130 @@ pub_carol = keyCarol.pub
 pub_david = keyDavid.pub
 ```
 
+### P2PKH送金
+
+```ruby
+#####################
+# 基本
+#
+# 送金先アドレス、送金金額，おつりアドレス
+def send_tapyrus(addr, amount, addr_change)
+    # 所持金残高を確認
+    balance = tapyrusRPC('getbalance', [])
+    if balance < (amount+FEE) then
+        puts "error (残高不足)"
+    else
+        # 送金金額＋手数料をぎりぎり上回るUTXOリストの作成
+        utxos = consuming_utxos(amount+FEE)
+        # 送金に使用するUTXOの総額
+        fund = utxos.map{|utxo|utxo["amount"]}.sum
+        # UTXOの総額 - 送金金額 - 手数料 = おつり
+        change = fund-amount-FEE
+        # トランザクションの構成（P2PKH)
+        tx = p2pkh_tx(addr, amount, utxos, change, addr_change)
+        # トランザクションへの署名
+        tx = sign_inputs(utxos, tx)
+        # ビットコインネットワークへのデプロイ
+        return tapyrusRPC('sendrawtransaction', [tx.to_hex])
+    end
+end
+
+# 送金金額＋手数料をぎりぎり上回るUTXOリストの作成
+def consuming_utxos(amount)
+    # ワレットの未使用のUTXOの一覧を得る
+    unspent = tapyrusRPC('listunspent', [])
+    # 消費可能状態のUTXOの選定
+    spendable_utxos = unspent.select{|t|t["spendable"]==true}
+    # UTXOを金額で昇順にソートする
+    sorted_utxos = spendable_utxos.sort_by{|x|x["amount"]}
+    # 少額のUTXOから集めて，指定金額を上回るぎりぎりのUTXOのリストを作成する
+    utxos=[]
+    begin
+        utxos << sorted_utxos.shift
+        balance = utxos.reduce(0){|s,t|s+=t["amount"]}
+    end until balance >= amount
+    return utxos
+end
+
+# トランザクションのinputの構成
+def tx_inputs(tx, utxos)
+    utxos.each{|utxo|
+        # UTXOをinputから参照するための txid と vout としてエンコードする
+        outpoint = Tapyrus::OutPoint.from_txid(utxo["txid"], utxo["vout"])
+        # エンコードした参照をトランザクションのinputに埋め込む
+        tx.in << Tapyrus::TxIn.new(out_point: outpoint)
+    }
+    return tx
+end
+
+# トランザクションのoutputの構成
+def tx_outputs(tx,amount, addr, change, addr_change)
+    # 送金用outputの構成
+    # 金額を satoshiの整数に変換
+    amount_satoshi = (amount*(10**8)).to_i
+    # ビットコインアドレスから p2pkhのscript_pubkey を生成
+    scriptPubKey0 = Tapyrus::Script.parse_from_addr(addr)
+    # エンコードしたscript_pubkeyをトランザクションのoutputに埋め込む
+    tx.out << Tapyrus::TxOut.new(value: amount_satoshi , script_pubkey: scriptPubKey0)
+    # おつり用outputの構成
+    # 金額を satoshiの整数に変換
+    change_satoshi =  (change*(10**8)).to_i
+    # ビットコインアドレスから p2wpkhのscript_pubkey を生成
+    scriptPubKey1 = Tapyrus::Script.parse_from_addr(addr_change)
+    # エンコードしたscript_pubkeyをトランザクションのoutputに埋め込む
+    tx.out << Tapyrus::TxOut.new(value: change_satoshi, script_pubkey: scriptPubKey1)
+    return tx
+end
+
+# P2PKHトランザクションの構成
+def p2pkh_tx(addr,amount, utxos, change, addr_change)
+    # トランザクションのテンプレートの生成
+    tx = Tapyrus::Tx.new
+    # トランザクションのinputの構成
+    tx = tx_inputs(tx,utxos)
+    # トランザクションのoutputの構成
+    tx = tx_outputs(tx,amount, addr, change, addr_change)
+    return tx
+end
+
+# トランザクションへの署名
+def sign_inputs(utxos, tx)
+    utxos.each.with_index{|utxo,index|
+        # UTXOのscriptPubKey をオブジェクト化する
+        script_pubkey = Tapyrus::Script.parse_from_payload(utxo["scriptPubKey"].htb)
+        # scriptPubKey の送金先アドレス
+        myaddr = script_pubkey.to_addr
+        # UTXOの送付先アドレスの秘密鍵（署名鍵）
+        priv = tapyrusRPC('dumpprivkey', [myaddr]).chomp
+        # 署名鍵オブジェクト
+        key = Tapyrus::Key.from_wif(priv)
+        # UTXOの金額
+        satoshi = (utxo["amount"]*(10**8)).to_i
+        case script_pubkey.type
+        when "pubkeyhash"   # UTXOがP2PKHタイプ
+            # トランザクションのハッシュ値を計算
+            sighash = tx.sighash_for_input(index, script_pubkey)
+            # トランザクションへの署名＋署名タイプ情報を付加
+            sig = key.sign(sighash) + [Tapyrus::SIGHASH_TYPE[:all]].pack('C')
+            # inputへの署名の追加
+            tx.in[index].script_sig << sig
+            # inputへの公開鍵の追加
+            tx.in[index].script_sig << key.pubkey.htb
+        end
+    }
+    return tx
+end
+```
+
+
+#### P2PKH 送金のテスト
+
+```ruby
+# 送金の実行。実行結果はトランザクションID
+txid = send_tapyrus(bob, 0.0001, alice).chomp
+```
+
+
 ### Tapyrus P2SH 送金トランザクション
 
 P2PKHトランザクションも
@@ -78,6 +202,7 @@ P2PKHトランザクションも
 #    mはアンロックに必要な公開鍵の数
 #    amount は、p2sh で送金する金額
 #    pubkeys は、n個の公開鍵の配列
+#    addr_change は，おつり用アドレス
 
 def send_multisig(amount, m, pubkeys, addr_change)
     # 所持金残高を確認
@@ -135,129 +260,9 @@ def p2sh_outputs(tx, amount, redeem_script, change, addr_change)
     return tx
 end
 
-#####################
-# 基本
-#
-# 送金先アドレス、送金金額，おつりアドレス
-def send_tapyrus(addr, amount, addr_change)
-    # 所持金残高を確認
-    balance = tapyrusRPC('getbalance', [])
-    if balance < (amount+FEE) then
-        puts "error (残高不足)"
-    else
-        # 送金金額＋手数料をぎりぎり上回るUTXOリストの作成
-        utxos = consuming_utxos(amount+FEE)
-        # 送金に使用するUTXOの総額
-        fund = utxos.map{|utxo|utxo["amount"]}.sum
-        # UTXOの総額 - 送金金額 - 手数料 = おつり
-        change = fund-amount-FEE
-        # トランザクションの構成（P2PKH)
-        tx = p2pkh_tx(addr, amount, utxos, change, addr_change)
-        # トランザクションへの署名
-        tx = sign_inputs(utxos, tx)
-        # ビットコインネットワークへのデプロイ
-        return tapyrusRPC('sendrawtransaction', [tx.to_hex])
-    end
-end
-
-# 送金金額＋手数料をぎりぎり上回るUTXOリストの作成
-def consuming_utxos(amount)
-    # ワレットの未使用のUTXOの一覧を得る
-    unspent = tapyrusRPC('listunspent', [])
-    # 消費可能状態のUTXOの選定
-    spendable_utxos = unspent.select{|t|t["spendable"]==true}
-    # UTXOを金額で昇順にソートする
-    sorted_utxos = spendable_utxos.sort_by{|x|x["amount"]}
-    # 少額のUTXOから集めて，指定金額を上回るぎりぎりのUTXOのリストを作成する
-    utxos=[]
-    begin
-        utxos << sorted_utxos.shift
-        balance = utxos.reduce(0){|s,t|s+=t["amount"]}
-    end until balance >= amount
-    return utxos
-end
-
-# トランザクションのinputの構成
-def tx_inputs(tx, utxos)
-    utxos.each{|utxo|
-        # UTXOをinputから参照するための txid と vout としてエンコードする
-        outpoint = Tapyrus::OutPoint.from_txid(utxo["txid"], utxo["vout"])
-        # エンコードした参照をトランザクションのinputに埋め込む
-        tx.in << Tapyrus::TxIn.new(out_point: outpoint)
-    }
-    return tx
-end
-
-# トランザクションのoutputの構成
-def tx_outputs(tx,amount, addr, change, addr_change)
-    # 送金用outputの構成
-    # 金額を satoshiの整数に変換
-    amount_satoshi = (amount*(10**8)).to_i
-    # ビットコインアドレスから p2pkhのscript_pubkey を生成
-    scriptPubKey0 = Tapyrus::Script.parse_from_addr(addr)
-    # エンコードしたscript_pubkeyをトランザクションのoutputに埋め込む
-    tx.out << Tapyrus::TxOut.new(value: amount_satoshi , script_pubkey: scriptPubKey0)
-    # おつり用outputの構成
-    # 金額を satoshiの整数に変換
-    change_satoshi =  (change*(10**8)).to_i
-    # ビットコインアドレスから p2wpkhのscript_pubkey を生成
-    scriptPubKey1 = Tapyrus::Script.parse_from_addr(addr_change)
-    # エンコードしたscript_pubkeyをトランザクションのoutputに埋め込む
-    tx.out << Tapyrus::TxOut.new(value: change_satoshi, script_pubkey: scriptPubKey1)
-    return tx
-end
-
-# P2PKHトランザクションの構成
-def p2pkh_tx(addr,amount, utxos, change, addr_change)
-    # トランザクションのテンプレートの生成
-    tx = Tapyrus::Tx.new
-    # トランザクションのinputの構成
-    tx = tx_inputs(tx,utxos)
-    # トランザクションのoutputの構成
-    tx = tx_outputs(tx,amount, addr, change, addr_change)
-    return tx
-end
-
-# トランザクションへの署名
-def sign_inputs(utxos, tx)
-    utxos.each.with_index{|utxo,index|
-        # UTXOのscriptPubKey をオブジェクト化する
-        script_pubkey = Tapyrus::Script.parse_from_payload(utxo["scriptPubKey"].htb)
-        # scriptPubKey の送金先アドレス
-        myaddr = script_pubkey.to_addr
-        # UTXOの送付先アドレスの秘密鍵（署名鍵）
-        priv = tapyrusRPC('dumpprivkey', [myaddr]).chomp
-        # 署名鍵オブジェクト
-        key = Tapyrus::Key.from_wif(priv)
-        # UTXOの金額
-        satoshi = (utxo["amount"]*(10**8)).to_i
-        case script_pubkey.type
-        when "pubkeyhash"   # UTXOがP2PKHタイプ
-            # トランザクションのハッシュ値を計算
-            sighash = tx.sighash_for_input(index, script_pubkey)
-            # トランザクションへの署名＋署名タイプ情報を付加
-            sig = key.sign(sighash) + [Tapyrus::SIGHASH_TYPE[:all]].pack('C')
-            # inputへの署名の追加
-            tx.in[index].script_sig << sig
-            # inputへの公開鍵の追加
-            tx.in[index].script_sig << key.pubkey.htb
-        end
-    }
-    return tx
-end
 ```
 
-#### 送金のテスト
-
-通常のP2PKH 送金
-
-```ruby
-# 送金の実行。実行結果はトランザクションID
-txid = send_tapyrus(bob, 0.0001, alice)
-```
-
-マルチシグの P2SH 送金
-
+#### マルチシグの P2SH 送金
 
 ```ruby
 # 送金金額、署名閾値、公開鍵リスト
@@ -265,7 +270,7 @@ amount = 0.0001
 m = 2
 pubkeys = [pub_alice, pub_bob, pub_carol]
 # 送金
-locked_tx, locked_txid, redeem_script_hex = send_multisig(amount,m,pubkeys, bob)
+locked_tx, locked_txid, redeem_script = send_multisig(amount,m,pubkeys, bob)
 
 
 ################################
@@ -278,75 +283,16 @@ locked_tx, locked_txid, redeem_script_hex = send_multisig(amount,m,pubkeys, bob)
 
 ## p2sh タイプのUTXOの使用（アンロック）
 
+Alice と Bobが署名すると 
+
+```ruby
+redeem_script_hex = redeem_script.to_hex
+```
 
 ### アンロックに必要な情報
 
 * 送金者から、送金したp2shトランザクションID (locked_txid) と redeem scriptを入手する必要がある
 * m of n マルチシグにおける m 人以上の署名鍵が必要
-
-### 共通環境
-
-```ruby
-#  共通部分
-require 'tapyrus'
-require 'json'
-require "open3"
-
-include Tapyrus
-include Tapyrus::Opcodes
-FEE = 0.00002       # 手数料
-
-Tapyrus.chain_params = :prod
-
-# tapyrus-cli コマンドのフルパス
-Tapyrus_cli ='~/tapyrus-core-0.5.1/bin/tapyrus-cli'
-
-# RPC
-def tapyrusRPC(method,params)
-    r=Open3.capture3("#{Tapyrus_cli} #{method} #{params.join(' ')}")
-    if r[1] == "" then
-        begin
-            return JSON.parse(r[0])
-        rescue JSON::ParserError
-            return r[0]
-        end
-    else
-        return r[1]
-    end
-end
-##################################
-# テスト用アカウントと鍵
-mnemonic = Tapyrus::Mnemonic.new('english')
-word_list =["ozone", "bounce", "hurdle", "weird", "token", "exclude", "remember", "swear", "knife", "bitter", "blossom", "horn", "repair", "aspect", "girl", "merit", "palace", "boring", "pottery", "relax", "sunset", "lucky", "elephant", "ticket"]
-seed = mnemonic.to_seed(word_list)
-master_key = Tapyrus::ExtKey.generate_master(seed)
-# derive path 'm/0H'
-key = master_key.derive(0, true)
-#  鍵オブジェクト
-keyAlice = key.derive(1)
-keyBob   = key.derive(2)
-keyCarol = key.derive(3)
-keyDavid = key.derive(4)
-# テスト用の秘密鍵
-priv_alice = keyAlice.priv
-priv_bob   = keyBob.priv
-priv_carol = keyCarol.priv
-priv_david = keyDavid.priv
-## アドレス
-alice = keyAlice.addr
-bob   = keyBob.addr
-carol = keyCarol.addr
-david = keyDavid.addr
-# 公開鍵
-pub_alice = keyAlice.pub
-pub_bob   = keyBob.pub
-pub_carol = keyCarol.pub
-pub_david = keyDavid.pub
-```
-
-### マルチシグトランザクションのアンロック処理
-
-P2PKHなども含む
 
 ```ruby
 #  アンロックする主体に渡す情報を代入文の文字列にしたもの
@@ -357,7 +303,7 @@ redeem_script_hex
 # アンロックした資金は addr に送金するものとする
 # 二人の署名鍵によるアンロック（key1, key2)
 
-def send_unlock_multisig(locked_txid, redeem_script_hex, addr, key1, key2)
+def unlock_send_multisig(locked_txid, redeem_script_hex, addr, key1, key2)
     # 16進数形式redeem script の復元
     redeem_script = Tapyrus::Script.parse_from_payload(redeem_script_hex.htb)
     # アンロック対象トランザクションとUTXOを確定する
@@ -387,188 +333,18 @@ def send_unlock_multisig(locked_txid, redeem_script_hex, addr, key1, key2)
     tx.in[0].script_sig << sig2
     tx.in[0].script_sig << redeem_script.to_payload
     # 署名したトランザクションをブロードキャストする
-    p2sh_txid = tapyrusRPC('sendrawtransaction', [tx.to_hex])
+    p2sh_txid = tapyrusRPC('sendrawtransaction', [tx.to_hex]).chomp
     return p2sh_txid, tx
-end
-
-###  P2SH m of n マルチシグトランザクション送金
-#    mはアンロックに必要な公開鍵の数
-#    amount は、p2sh で送金する金額
-#    pubkeys は、n個の公開鍵の配列
-
-def send_multisig(amount, m, pubkeys, addr_change)
-    # 所持金残高を確認
-    balance = tapyrusRPC('getbalance', [])
-    if balance < (amount+FEE) then
-        puts "error (残高不足)"
-    else
-        # 送金金額＋手数料をぎりぎり上回るUTXOリストの作成
-        utxos = consuming_utxos(amount+FEE)
-        # 送金に使用するUTXOの総額
-        fund = utxos.map{|utxo|utxo["amount"]}.sum
-        # UTXOの総額 - 送金金額 - 手数料 = おつり
-        change = fund-amount-FEE
-        # redeem scriptの生成
-        redeem_script = Tapyrus::Script.to_multisig_script(m,pubkeys)
-        # トランザクションの構成（P2SH)
-        tx = p2sh_tx(utxos, amount, redeem_script, addr_change)
-        # トランザクションへの署名
-        tx = sign_inputs(utxos, tx)
-        # トランザクションのデプロイ
-        txid = tapyrusRPC('sendrawtransaction',[tx.to_hex])
-        # p2shトランザクションのアンロックに必要な情報の出力
-        return tx, txid.chomp, redeem_script
-    end
-end
-
-# p2sh 未署名トランザクションの構成
-def p2sh_tx(utxos, amount, redeem_script, addr_change)
-    # おつり = UTXOの総額 - 送金金額 - 手数料
-    change = (utxos.map{|utxo|utxo["amount"]}.sum)-amount-FEE
-    # トランザクションのスケルトン
-    tx = Tapyrus::Tx.new
-    # トランザクションのinputの構成
-    tx = tx_inputs(tx,utxos)
-    # P2SHトランザクションのoutputの構成
-    tx = p2sh_outputs(tx, amount, redeem_script, change, addr_change)
-    return tx
-end
-
-# p2shトランザクションのoutputの構成
-def p2sh_outputs(tx, amount, redeem_script, change, addr_change)
-    # satoshi変換
-    change_satoshi = (change*(10**8)).to_i
-    amount_satoshi = (amount*(10**8)).to_i
-    # redeem_script を p2shアドレスに変換する
-    p2sh_addr = redeem_script.to_p2sh.addresses[0]
-    #  p2shアドレスからscript pubkey を生成
-    scriptPubKey0 = Tapyrus::Script.parse_from_addr(p2sh_addr)
-    # 作成したscript pubkey outputに設定する
-    tx.out << Tapyrus::TxOut.new(value: amount_satoshi, script_pubkey: scriptPubKey0)
-    # おつり用script pub key の構成(P2PKH)
-    scriptPubKey1 = Tapyrus::Script.parse_from_addr(addr_change)
-    # おつり用のoutput
-    tx.out << Tapyrus::TxOut.new(value: change_satoshi, script_pubkey: scriptPubKey1)
-    return tx
-end
-
-#####################
-# 基本
-#
-# 送金先アドレス、送金金額，おつりアドレス
-def send_tapyrus(addr, amount, addr_change)
-    # 所持金残高を確認
-    balance = tapyrusRPC('getbalance', [])
-    if balance < (amount+FEE) then
-        puts "error (残高不足)"
-    else
-        # 送金金額＋手数料をぎりぎり上回るUTXOリストの作成
-        utxos = consuming_utxos(amount+FEE)
-        # 送金に使用するUTXOの総額
-        fund = utxos.map{|utxo|utxo["amount"]}.sum
-        # UTXOの総額 - 送金金額 - 手数料 = おつり
-        change = fund-amount-FEE
-        # トランザクションの構成（P2PKH)
-        tx = p2pkh_tx(addr, amount, utxos, change, addr_change)
-        # トランザクションへの署名
-        tx = sign_inputs(utxos, tx)
-        # ビットコインネットワークへのデプロイ
-        return tapyrusRPC('sendrawtransaction', [tx.to_hex])
-    end
-end
-
-# 送金金額＋手数料をぎりぎり上回るUTXOリストの作成
-def consuming_utxos(amount)
-    # ワレットの未使用のUTXOの一覧を得る
-    unspent = tapyrusRPC('listunspent', [])
-    # 消費可能状態のUTXOの選定
-    spendable_utxos = unspent.select{|t|t["spendable"]==true}
-    # UTXOを金額で昇順にソートする
-    sorted_utxos = spendable_utxos.sort_by{|x|x["amount"]}
-    # 少額のUTXOから集めて，指定金額を上回るぎりぎりのUTXOのリストを作成する
-    utxos=[]
-    begin
-        utxos << sorted_utxos.shift
-        balance = utxos.reduce(0){|s,t|s+=t["amount"]}
-    end until balance >= amount
-    return utxos
-end
-
-# トランザクションのinputの構成
-def tx_inputs(tx, utxos)
-    utxos.each{|utxo|
-        # UTXOをinputから参照するための txid と vout としてエンコードする
-        outpoint = Tapyrus::OutPoint.from_txid(utxo["txid"], utxo["vout"])
-        # エンコードした参照をトランザクションのinputに埋め込む
-        tx.in << Tapyrus::TxIn.new(out_point: outpoint)
-    }
-    return tx
-end
-
-# トランザクションのoutputの構成
-def tx_outputs(tx,amount, addr, change, addr_change)
-    # 送金用outputの構成
-    # 金額を satoshiの整数に変換
-    amount_satoshi = (amount*(10**8)).to_i
-    # ビットコインアドレスから p2pkhのscript_pubkey を生成
-    scriptPubKey0 = Tapyrus::Script.parse_from_addr(addr)
-    # エンコードしたscript_pubkeyをトランザクションのoutputに埋め込む
-    tx.out << Tapyrus::TxOut.new(value: amount_satoshi , script_pubkey: scriptPubKey0)
-    # おつり用outputの構成
-    # 金額を satoshiの整数に変換
-    change_satoshi =  (change*(10**8)).to_i
-    # ビットコインアドレスから p2wpkhのscript_pubkey を生成
-    scriptPubKey1 = Tapyrus::Script.parse_from_addr(addr_change)
-    # エンコードしたscript_pubkeyをトランザクションのoutputに埋め込む
-    tx.out << Tapyrus::TxOut.new(value: change_satoshi, script_pubkey: scriptPubKey1)
-    return tx
-end
-
-# P2PKHトランザクションの構成
-def p2pkh_tx(addr,amount, utxos, change, addr_change)
-    # トランザクションのテンプレートの生成
-    tx = Tapyrus::Tx.new
-    # トランザクションのinputの構成
-    tx = tx_inputs(tx,utxos)
-    # トランザクションのoutputの構成
-    tx = tx_outputs(tx,amount, addr, change, addr_change)
-    return tx
-end
-
-# トランザクションへの署名
-def sign_inputs(utxos, tx)
-    utxos.each.with_index{|utxo,index|
-        # UTXOのscriptPubKey をオブジェクト化する
-        script_pubkey = Tapyrus::Script.parse_from_payload(utxo["scriptPubKey"].htb)
-        # scriptPubKey の送金先アドレス
-        myaddr = script_pubkey.to_addr
-        # UTXOの送付先アドレスの秘密鍵（署名鍵）
-        priv = tapyrusRPC('dumpprivkey', [myaddr]).chomp
-        # 署名鍵オブジェクト
-        key = Tapyrus::Key.from_wif(priv)
-        # UTXOの金額
-        satoshi = (utxo["amount"]*(10**8)).to_i
-        case script_pubkey.type
-        when "pubkeyhash"   # UTXOがP2PKHタイプ
-            # トランザクションのハッシュ値を計算
-            sighash = tx.sighash_for_input(index, script_pubkey)
-            # トランザクションへの署名＋署名タイプ情報を付加
-            sig = key.sign(sighash) + [Tapyrus::SIGHASH_TYPE[:all]].pack('C')
-            # inputへの署名の追加
-            tx.in[index].script_sig << sig
-            # inputへの公開鍵の追加
-            tx.in[index].script_sig << key.pubkey.htb
-        end
-    }
-    return tx
 end
 ```
 
 ### 送金テスト
 
+Aliceの秘密鍵 と Bobの秘密鍵を入力にしてアンロックする場合になっている
+しかし，実際にはこういうことはありえない
+
 ```ruby
-# Alice と Bobの秘密鍵によるアンロック
-# アンロックした資金は Aliceのアドレスに送金する
-unlock_txid , unlock_tx = send_unlock_multisig(locked_txid, redeem_script_hex, alice, keyAlice, keyBob)
+# アンロックした資金は Carolのアドレスに送金する
+unlock_txid , unlock_tx = unlock_send_multisig(locked_txid, redeem_script_hex, carol, keyAlice, keyBob)
 ```
 
