--- a/tapyrus/5. tapyrusrb-HTLC.md
+++ b/tapyrus/5. tapyrusrb-HTLC.md
@@ -1,6 +1,6 @@
 # tapyrusrbでHTLC
 
-最終更新 2022/12/21 Shigeichiro Yamasaki
+最終更新 2023/07/05 Shigeichiro Yamasaki
 
 tapyrusrb を使ってP2SH の送金と受領を行うトランザクションを作成する
 
@@ -26,7 +26,7 @@ OP_CHECKSIG
 ```
 
 
-### Tapyrus RPC
+### 共通環境
 
 ```ruby
 #  共通部分
@@ -41,7 +41,7 @@ FEE = 0.00002       # 手数料
 Tapyrus.chain_params = :prod
 
 # tapyrus-cli コマンドのフルパス
-Tapyrus_cli ='~/tapyrus-core-0.5.1/bin/tapyrus-cli'
+Tapyrus_cli ='~/tapyrus-core-0.5.2/bin/tapyrus-cli'
 
 # RPC
 def tapyrusRPC(method,params)
@@ -53,16 +53,11 @@ def tapyrusRPC(method,params)
             return r[0]
         end
     else
-        return r[1] # エラーメッセージ
+        return r[1]
     end
 end
-```
-
-### テスト用アカウントの作成
-
-```ruby
+##################################
 # テスト用アカウントと鍵
-
 mnemonic = Tapyrus::Mnemonic.new('english')
 word_list =["ozone", "bounce", "hurdle", "weird", "token", "exclude", "remember", "swear", "knife", "bitter", "blossom", "horn", "repair", "aspect", "girl", "merit", "palace", "boring", "pottery", "relax", "sunset", "lucky", "elephant", "ticket"]
 seed = mnemonic.to_seed(word_list)
@@ -91,7 +86,7 @@ pub_carol = keyCarol.pub
 pub_david = keyDavid.pub
 ```
 
-### トランザクション構成の基本部分
+### P2PKH送金
 
 ```ruby
 #####################
@@ -206,11 +201,14 @@ def sign_inputs(utxos, tx)
 end
 ```
 
-送金テスト
+
+#### P2PKH 送金のテスト
 
 ```ruby
+# 送金の実行。実行結果はトランザクションID
 txid = send_tapyrus(bob, 0.0001, alice).chomp
 ```
+
 
 ### 秘密情報
 
