--- a/tapyrus/2. tapyrusrb.md
+++ b/tapyrus/2. tapyrusrb.md
@@ -1,6 +1,6 @@
 # tapyrusrb
 
-最終更新 2023/07/05 Shigeichiro Yamasaki
+最終更新 2023/07/06 Shigeichiro Yamasaki
 
 Tapyrus API をRuby から操作する rubygemsの基本
 
@@ -158,8 +158,8 @@ tx = tapyrusRPC('gettransaction',[txid])
 
 ### UTXOの作成
 
-とりあえず10個に分割し
-その後さらにに50個に分割する
+とりあえず6個に分割し
+その後さらにに20個に分割する
 
 ```ruby
 def newutxo(amount)
@@ -171,14 +171,15 @@ end
 6.times do newutxo(0.0001) end
 
 # 20分後(10分後ではまだUTXOになっていません）
-50.times do newutxo(0.0001) end
+20.times do newutxo(0.0001) end
 
 # さらに10分待つ
 ```
 
 ### トークン発行
 
-使用するUTXO
+10分以上経過
+使用するUTXOを確認する
 
 ```ruby
 # TPCトークンを選択
@@ -220,24 +221,7 @@ NRTトークンのcolorとUTXOの確認
 
 ```ruby
 color1 = nrt["color"]
-
-# 10分後
-
-nrts = tapyrusRPC('listunspent',[]).select{|x|x["token"]==color1}
-=> 
-[{"txid"=>"c95295be03d965bd31ebf699c7c9b0923d81afe0d172e5b5b6d48e56bd597c5a",
-  "vout"=>0,                   
-  "address"=>"4ZqfnakPgRvbWtEwnywDfoTkfENr4teS45dVnBfuZgRYfL9BYSRtMP8KczL14PWKYufac4rnn4fwxa7",
-  "token"=>"c26a15e5ade9c5c137e04ce7e200b3a9566dcefb403781221794e9471145738cb2",
-  "amount"=>1000,              
-  "scriptPubKey"=>             
-   "21c26a15e5ade9c5c137e04ce7e200b3a9566dcefb403781221794e9471145738cb2bca914186460b6b034f6c76c6fe57483a5737326cca13387",           
-  "confirmations"=>4,
-  "spendable"=>true,
-  "solvable"=>true,
-  "safe"=>true}] 
 ```
-
 
 #### NFTの発行
 
@@ -256,23 +240,8 @@ NFTトークンのcolorとUTXOの確認
 
 ```ruby
 color2 = nft["color"]
-
-# 10分後
-
-nfts = tapyrusRPC('listunspent',[]).select{|x|x["token"]==color2}
-=> 
-[{"txid"=>"669a3062518dc15beaed588748e055474a4feec8e279dc15c3742614713ce716",
-  "vout"=>0,                   
-  "address"=>"4Zw7sGTmZHgkfS8L1VSe7nz1Mpq4YjE2XfXqhWbJ8gQGoZ1FSkLjTJqkw24BNjTvg7QxYRie15a1dvw",
-  "token"=>"c3335194a791210d8fe60d5f3c767f238b410c115c708c987098ffd61d56bf25e1",
-  "amount"=>1,                 
-  "scriptPubKey"=>             
-   "21c3335194a791210d8fe60d5f3c767f238b410c115c708c987098ffd61d56bf25e1bca914e0af93c9eb8494e9ddbd63a3b839bf718856d6c687",           
-  "confirmations"=>3,          
-  "spendable"=>true,
-  "solvable"=>true,
-  "safe"=>true}]  
 ```
+
 
 #### Reissuable Token の発行
 
@@ -292,9 +261,50 @@ RTトークンのcolorとUTXOの確認
 
 ```ruby
 color3 = rt["color"]
+```
 
-# 10分後
 
+### 発行したトークンの確認
+
+10分後
+
+#### NRT
+
+```ruby
+nrts = tapyrusRPC('listunspent',[]).select{|x|x["token"]==color1}
+=> 
+[{"txid"=>"00bb07a9af3a3014fadea7c55e836f831c7e4c5b4a44d5259c867b6fc9b09f88",
+  "vout"=>0,                   
+  "address"=>"4ZtqffSMxgiwWzxRfq2FdfzFQHXwJg7Ccgxerd6NfnqxfZDq6qj95nndGWUoXqa86UZnzUfqfS9qD7T",
+  "token"=>"c2df274341853464d79e659c87251745991385f801164953bf569fb0eba07475a3",
+  "amount"=>1000,              
+  "scriptPubKey"=>"21c2df274341853464d79e659c87251745991385f801164953bf569fb0eba07475a3bca914c9b76c4d46c630ddcb11c4ece88c604ccd1dfaee87",
+  "confirmations"=>3,          
+  "spendable"=>true,           
+  "solvable"=>true,
+  "safe"=>true}]
+```
+
+#### NFT
+
+```ruby
+nfts = tapyrusRPC('listunspent',[]).select{|x|x["token"]==color2}
+=> 
+[{"txid"=>"652121c56507139ee41fe70e39017847579c3fb5a2b60aa42c871fbc83a1a32d",
+  "vout"=>0,                   
+  "address"=>"4a2cDohm6eCjim1vM4TVMDmJVi8DVhA4gkU3Y4ftVpF5GRYj8t81kja34kuSPmmMfu66sreamXd55pN",
+  "token"=>"c3fdffc79e054ac8c24bbe35955eea8298fa9b99f5f6cb7d260ae3663bf82621f5",
+  "amount"=>1,                 
+  "scriptPubKey"=>"21c3fdffc79e054ac8c24bbe35955eea8298fa9b99f5f6cb7d260ae3663bf82621f5bca914ebfe2f86e1a2ff92da623c3dc15df30026e9f36487",
+  "confirmations"=>1,          
+  "spendable"=>true,           
+  "solvable"=>true,            
+  "safe"=>true}] 
+```
+
+#### RT
+
+```ruby
 rts = tapyrusRPC('listunspent',[]).select{|x|x["token"]==color3}
 => 
 [{"txid"=>"669a3062518dc15beaed588748e055474a4feec8e279dc15c3742614713ce716",
@@ -309,6 +319,7 @@ rts = tapyrusRPC('listunspent',[]).select{|x|x["token"]==color3}
   "solvable"=>true,
   "safe"=>true}]  
 ```
+
 
 ### カラー付きアドレスの生成
 
@@ -333,12 +344,12 @@ c=colors
 カラー付きアドレスを生成する
 
 ```ruby
-addrNRT1 = tapyrusRPC('getnewaddress',["user#{rand(10000)}",color1])
-=> "vt8xz9MePQj3DrCR4xCBU2E1N64mRHRreSX7t6b4g9FzVMRhyG6KarYNkgtg8FhVTpHLBpcspNsNAP"
-addrNFT1 = tapyrusRPC('getnewaddress',["user#{rand(10000)}",color2])
-=> "vw6aD8hZXoNBBLWRehHPBS3QtWZQ2oscdyTD9gucbuS2Wndq61srxpaoHz3fBVeWJcum6GPvis3mbW"
-addrRT1 = tapyrusRPC('getnewaddress',["user#{rand(10000)}",color3])
-=> "vgt1L6fTUm1wjKsbo1Gkipbp74nveakeTRaAMgzwu6VUJapbi7nTb9mwH5vcm4HCDCaDqmp59PB6ke"
+addrNRT1 = tapyrusRPC('getnewaddress',["user#{rand(10000)}",color1]).chomp
+=> "vtpNc7HxvqZ2kAc5zGtu4SHTMDS9yh3hfQGNGBz9iM7tWu8wvfBTg8ANfBxjHgHW3NV3GiQ8C1HyAp"
+addrNFT1 = tapyrusRPC('getnewaddress',["user#{rand(10000)}",color2]).chomp
+=> "w2avkNh6tKMEWE6mDi8ccDLYmoiLzjumiuf3hmVyjkEVPGCbeQEZsvCJ1CdNu1PhBBxVVJzV1mfnff"
+addrRT1 = tapyrusRPC('getnewaddress',["user#{rand(10000)}",color3]).chomp
+=> "vhdgm8dvpiSpGNitAm4GxizDSsTk2y7HjAGh2HoR727FWmMgg7rTK3L9agPrqwVBCsShwVwCevbGVZ"
 ```
 
 ### トークンの送付
@@ -361,7 +372,7 @@ tapyrusRPC('decoderawtransaction',[tapyrusRPC('getrawtransaction',[tt2])])
 tapyrusRPC('decoderawtransaction',[tapyrusRPC('getrawtransaction',[tt3])])
 ```
 
-###  Tapyrus送金プログラム
+##  Tapyrus送金プログラム
 
 ```ruby
 #  Tapyrus送金メソッド
@@ -383,7 +394,7 @@ def send_tapyrus(addr, amount, addr_change)
         # トランザクションへの署名
         tx = sign_inputs(utxos, tx)
         # ビットコインネットワークへのデプロイ
-        return tapyrusRPC('sendrawtransaction', [tx.to_hex])
+        return tapyrusRPC('sendrawtransaction', [tx.to_hex]).chomp
     end
 end
 # P2PKHトランザクションの構成
@@ -456,7 +467,7 @@ def consuming_utxos(amount)
     # ワレットの未使用のUTXOの一覧を得る
     unspent = tapyrusRPC('listunspent', [])
     # 消費可能状態のUTXOの選定
-    spendable_utxos = unspent.select{|t|t["spendable"]==true}
+    spendable_utxos = unspent.select{|t|t["spendable"]==true and t["token"]=="TPC"}
     # UTXOを金額で昇順にソートする
     sorted_utxos = spendable_utxos.sort_by{|x|x["amount"]}
     # 少額のUTXOから集めて，指定金額を上回るぎりぎりのUTXOのリストを作成する
