--- a/tapyrus/2. tapyrusrb.md
+++ b/tapyrus/2. tapyrusrb.md
@@ -158,8 +158,7 @@ tx = tapyrusRPC('gettransaction',[txid])
 
 ### UTXOの作成
 
-とりあえず6個に分割し
-その後さらにに20個に分割する
+20個に分割する
 
 ```ruby
 def newutxo(amount)
@@ -168,12 +167,10 @@ def newutxo(amount)
     puts txid
 end
 
-6.times do newutxo(0.0001) end
-
-# 20分後(10分後ではまだUTXOになっていません）
+# 実行
 20.times do newutxo(0.0001) end
 
-# さらに10分待つ
+# 10分待つ
 ```
 
 ### トークン発行
@@ -373,6 +370,8 @@ tapyrusRPC('decoderawtransaction',[tapyrusRPC('getrawtransaction',[tt3])])
 ```
 
 ##  Tapyrus送金プログラム
+
+コードの内容をよく確認してください．
 
 ```ruby
 #  Tapyrus送金メソッド
