--- a/tapyrus/2. tapyrusrb.md
+++ b/tapyrus/2. tapyrusrb.md
@@ -369,14 +369,14 @@ tapyrusRPC('decoderawtransaction',[tapyrusRPC('getrawtransaction',[tt2])])
 tapyrusRPC('decoderawtransaction',[tapyrusRPC('getrawtransaction',[tt3])])
 ```
 
-##  Tapyrus送金プログラム
+##  Tapyrus P2PKH 送金プログラム
 
 コードの内容をよく確認してください．
 
 ```ruby
 #  Tapyrus送金メソッド
-# 送金先アドレス、送金金額，おつりアドレス
-def send_tapyrus(addr, amount, addr_change)
+# 送金先アドレス、送金金額
+def send_tapyrus(addr, amount)
     # 所持金残高を確認
     balance = tapyrusRPC('getbalance', [])
     if balance < (amount+FEE) then
@@ -386,6 +386,8 @@ def send_tapyrus(addr, amount, addr_change)
         utxos = consuming_utxos(amount+FEE)
         # 送金に使用するUTXOの総額
         fund = utxos.map{|utxo|utxo["amount"]}.sum
+        # おつりアドレス
+        addr_change = utxos[0]["address"]
         # UTXOの総額 - 送金金額 - 手数料 = おつり
         change = fund-amount-FEE
         # トランザクションの構成（P2PKH)
@@ -479,6 +481,6 @@ def consuming_utxos(amount)
 end
 # 送金のテスト 
 # 送金の実行。実行結果はトランザクションID
-txid = send_tapyrus(bob, 0.0001, alice)
+txid = send_tapyrus(bob, 0.0001)
 
 ```
