--- a/tapyrus/3. tapyrusrb-P2SH.md
+++ b/tapyrus/3. tapyrusrb-P2SH.md
@@ -1,16 +1,20 @@
 # tapyrusrbでP2SHを実装
 
-2023/07/05 更新 Shigeichiro Yamasaki
+2023/07/06 更新 Shigeichiro Yamasaki
 
 tapyrus でスマートコントラクトを記述するときの基本は P2SH です
 
 P2SHの代表例はマルチシグなので、ここではその説明をしますが、それ以外のケースも重要です。
 
 
-### 共通環境
+## 共通環境
+### tapyrus RPC
+
+```bash
+irb
+```
 
 ```ruby
-#  共通部分
 require 'tapyrus'
 require 'json'
 require "open3"
@@ -18,7 +22,6 @@ require "open3"
 include Tapyrus
 include Tapyrus::Opcodes
 FEE = 0.00002       # 手数料
-
 Tapyrus.chain_params = :prod
 
 # tapyrus-cli コマンドのフルパス
@@ -37,7 +40,11 @@ def tapyrusRPC(method,params)
         return r[1]
     end
 end
-##################################
+```
+
+### テスト用アカウントの作成
+
+```ruby
 # テスト用アカウントと鍵
 mnemonic = Tapyrus::Mnemonic.new('english')
 word_list =["ozone", "bounce", "hurdle", "weird", "token", "exclude", "remember", "swear", "knife", "bitter", "blossom", "horn", "repair", "aspect", "girl", "merit", "palace", "boring", "pottery", "relax", "sunset", "lucky", "elephant", "ticket"]
@@ -50,31 +57,43 @@ keyAlice = key.derive(1)
 keyBob   = key.derive(2)
 keyCarol = key.derive(3)
 keyDavid = key.derive(4)
+keyErza  = key.derive(5)
+keyFranck = key.derive(6)
 # テスト用の秘密鍵
 priv_alice = keyAlice.priv
 priv_bob   = keyBob.priv
 priv_carol = keyCarol.priv
-priv_david = keyDavid.priv
+priv_erza  = keyErza.priv
+priv_franck = keyFranck.priv
 ## アドレス
 alice = keyAlice.addr
 bob   = keyBob.addr
 carol = keyCarol.addr
 david = keyDavid.addr
+erza  = keyErza.addr
+franck = keyFranck.addr
 # 公開鍵
 pub_alice = keyAlice.pub
 pub_bob   = keyBob.pub
 pub_carol = keyCarol.pub
 pub_david = keyDavid.pub
+pub_erza  = keyErza.pub
+pub_franck = keyFranck.pub
+# 自分のワレットの秘密鍵をインポート
+tapyrusRPC('importprivkey',[keyAlice.key.to_wif])
+tapyrusRPC('importprivkey',[keyBob.key.to_wif])
+tapyrusRPC('importprivkey',[keyCarol.key.to_wif])
+tapyrusRPC('importprivkey',[keyDavid.key.to_wif])
+tapyrusRPC('importprivkey',[keyErza.key.to_wif])
+tapyrusRPC('importprivkey',[keyFranck.key.to_wif])
 ```
 
-### P2PKH送金
+###  Tapyrus P2PKH 送金プログラム
 
 ```ruby
-#####################
-# 基本
-#
-# 送金先アドレス、送金金額，おつりアドレス
-def send_tapyrus(addr, amount, addr_change)
+#  Tapyrus送金メソッド
+# 送金先アドレス、送金金額
+def send_tapyrus(addr, amount)
     # 所持金残高を確認
     balance = tapyrusRPC('getbalance', [])
     if balance < (amount+FEE) then
@@ -84,6 +103,8 @@ def send_tapyrus(addr, amount, addr_change)
         utxos = consuming_utxos(amount+FEE)
         # 送金に使用するUTXOの総額
         fund = utxos.map{|utxo|utxo["amount"]}.sum
+        # おつりアドレス
+        addr_change = utxos[0]["address"]
         # UTXOの総額 - 送金金額 - 手数料 = おつり
         change = fund-amount-FEE
         # トランザクションの構成（P2PKH)
@@ -91,27 +112,19 @@ def send_tapyrus(addr, amount, addr_change)
         # トランザクションへの署名
         tx = sign_inputs(utxos, tx)
         # ビットコインネットワークへのデプロイ
-        return tapyrusRPC('sendrawtransaction', [tx.to_hex])
+        return tapyrusRPC('sendrawtransaction', [tx.to_hex]).chomp
     end
 end
-
-# 送金金額＋手数料をぎりぎり上回るUTXOリストの作成
-def consuming_utxos(amount)
-    # ワレットの未使用のUTXOの一覧を得る
-    unspent = tapyrusRPC('listunspent', [])
-    # 消費可能状態のUTXOの選定
-    spendable_utxos = unspent.select{|t|t["spendable"]==true}
-    # UTXOを金額で昇順にソートする
-    sorted_utxos = spendable_utxos.sort_by{|x|x["amount"]}
-    # 少額のUTXOから集めて，指定金額を上回るぎりぎりのUTXOのリストを作成する
-    utxos=[]
-    begin
-        utxos << sorted_utxos.shift
-        balance = utxos.reduce(0){|s,t|s+=t["amount"]}
-    end until balance >= amount
-    return utxos
+# P2PKHトランザクションの構成
+def p2pkh_tx(addr,amount, utxos, change, addr_change)
+    # トランザクションのテンプレートの生成
+    tx = Tapyrus::Tx.new
+    # トランザクションのinputの構成
+    tx = tx_inputs(tx,utxos)
+    # トランザクションのoutputの構成
+    tx = tx_outputs(tx,amount, addr, change, addr_change)
+    return tx
 end
-
 # トランザクションのinputの構成
 def tx_inputs(tx, utxos)
     utxos.each{|utxo|
@@ -122,7 +135,6 @@ def tx_inputs(tx, utxos)
     }
     return tx
 end
-
 # トランザクションのoutputの構成
 def tx_outputs(tx,amount, addr, change, addr_change)
     # 送金用outputの構成
@@ -141,18 +153,6 @@ def tx_outputs(tx,amount, addr, change, addr_change)
     tx.out << Tapyrus::TxOut.new(value: change_satoshi, script_pubkey: scriptPubKey1)
     return tx
 end
-
-# P2PKHトランザクションの構成
-def p2pkh_tx(addr,amount, utxos, change, addr_change)
-    # トランザクションのテンプレートの生成
-    tx = Tapyrus::Tx.new
-    # トランザクションのinputの構成
-    tx = tx_inputs(tx,utxos)
-    # トランザクションのoutputの構成
-    tx = tx_outputs(tx,amount, addr, change, addr_change)
-    return tx
-end
-
 # トランザクションへの署名
 def sign_inputs(utxos, tx)
     utxos.each.with_index{|utxo,index|
@@ -180,20 +180,42 @@ def sign_inputs(utxos, tx)
     }
     return tx
 end
+# 送金金額＋手数料をぎりぎり上回るUTXOリストの作成
+def consuming_utxos(amount)
+    # ワレットの未使用のUTXOの一覧を得る
+    unspent = tapyrusRPC('listunspent', [])
+    # 消費可能状態のUTXOの選定
+    spendable_utxos = unspent.select{|t|t["spendable"]==true and t["token"]=="TPC"}
+    # UTXOを金額で昇順にソートする
+    sorted_utxos = spendable_utxos.sort_by{|x|x["amount"]}
+    # 少額のUTXOから集めて，指定金額を上回るぎりぎりのUTXOのリストを作成する
+    utxos=[]
+    begin
+        utxos << sorted_utxos.shift
+        balance = utxos.reduce(0){|s,t|s+=t["amount"]}
+    end until balance >= amount
+    return utxos
+end
 ```
 
-
-#### P2PKH 送金のテスト
+#### 送金のテスト 
 
 ```ruby
 # 送金の実行。実行結果はトランザクションID
-txid = send_tapyrus(bob, 0.0001, alice).chomp
+txid = send_tapyrus(bob, 0.0001)
 ```
 
+## Tapyrus P2SH 送金トランザクション
 
-### Tapyrus P2SH 送金トランザクション
+P2SHアドレスにロックした資金を alice と bob の署名で david に送金する
 
-P2PKHトランザクションも
+```
+alice  ======> P2SHアドレス(bob,carol,david)
+       == お釣り alice           P2SH ======> erza
+                                 ↑
+                            (bob, carol) 署名 
+
+```
 
 ```ruby
 ###  P2SH m of n マルチシグトランザクション送金
