--- a/tapyrus/2. tapyrusrb.md
+++ b/tapyrus/2. tapyrusrb.md
@@ -158,7 +158,7 @@ tx = tapyrusRPC('gettransaction',[txid])
 
 ### UTXOの作成
 
-20個に分割する
+5個に分割する
 
 ```ruby
 def newutxo(amount)
@@ -168,10 +168,19 @@ def newutxo(amount)
 end
 
 # 実行
-20.times do newutxo(0.0001) end
+5.times do newutxo(0.0001) end
 
 # 10分待つ
 ```
+
+### UTXOの結合
+
+UTXOを分解しすぎると，「ゴミ＝dust」になってしまい，送金がエラーになります．
+
+エラーが出たときには，一時的に FEE の値を増やして，
+少し大きな金額の送金をして UTXOをまとめてください．
+
+
 
 ### トークン発行
 
