--- a/tapyrus/3. tapyrusrb-P2SH.md
+++ b/tapyrus/3. tapyrusrb-P2SH.md
@@ -209,10 +209,7 @@ tapyrusRPC('importprivkey',[keyCarol.key.to_wif])
 tapyrusRPC('importprivkey',[keyDavid.key.to_wif])
 tapyrusRPC('importprivkey',[keyErza.key.to_wif])
 tapyrusRPC('importprivkey',[keyFranck.key.to_wif])
-
 ```
-
-
 
 #### 送金のテスト 
 
@@ -319,7 +316,7 @@ amount = 0.0001
 m = 2
 pubkeys = [pub_bob, pub_carol, pub_david]
 # 送金
-locked_tx, locked_txid, redeem_script = send_multisig(amount,m,pubkeys)
+locked_tx, locked_txid, redeem_script_hex = send_multisig(amount,m,pubkeys)
 ```
 
 ## P2SHトランザクションのアンロック
@@ -341,11 +338,11 @@ m=2 に固定している
 # p2sh でロックされたトランザクションのtxid
 locked_txid 
 # redeem script の16進数形式
-redeem_script
+redeem_script_hex
 # アンロックした資金は addr に送金するものとする
 # 二人の秘密鍵による署名鍵（key1, key2)
 
-def unlock_p2sh(locked_txid, redeem_script, addr, key1, key2)
+def unlock_p2sh(locked_txid, redeem_script_hex, addr, key1, key2)
     # 16進数形式redeem script の復元
     redeem_script = Tapyrus::Script.parse_from_payload(redeem_script.htb)
     # アンロック対象トランザクションとUTXOを確定する
@@ -398,6 +395,6 @@ alice  ======> P2SHアドレス(bob,carol,david)
 
 ```ruby
 # アンロックした資金は Carolのアドレスに送金する
-unlock_txid , unlock_tx = unlock_p2sh(locked_txid, redeem_script, erza, keyBob, keyCarol)
+unlock_txid , unlock_tx = unlock_p2sh(locked_txid, redeem_script_hex, erza, keyBob, keyCarol)
 ```
 
