--- a/tapyrus/4.tapyrus script debugger.md
+++ b/tapyrus/4.tapyrus script debugger.md
@@ -1,4 +1,4 @@
-# Tapyrus スクリプトのデバッガ
+# Tapyrus script debugger
 
 最終更新 2023/07/06 Shigeichiro yamasaki
 
@@ -32,7 +32,7 @@ tx = unlock_tx.to_hex
 ### tapyrus-script-debugger の実行
 シェルから 16進数形式でデータを入力する
 
-scriptPubkey と scriptSig を
+scriptPubkey と scriptSig と tx のヘキサ形式を入手しておく
 
 ```bash
 tapyrus-script-debugger
