--- a/tapyrus/5.tapyrusrb-HTLC.md
+++ b/tapyrus/5.tapyrusrb-HTLC.md
@@ -1,9 +1,8 @@
 # tapyrusrbでHTLC
 
-最終更新 2023/07/05 Shigeichiro Yamasaki
+最終更新 2023/07/06 Shigeichiro Yamasaki
 
 tapyrusrb を使ってP2SH の送金と受領を行うトランザクションを作成する
-
 
 ### HTLCのunlocking script
 
@@ -25,38 +24,13 @@ OP_ENDIF
 OP_CHECKSIG
 ```
 
-
 ### 共通環境
 
+3.tapyrusrb-P2SH と同じ
+
 ```ruby
-#  共通部分
-require 'tapyrus'
-require 'json'
-require "open3"
+require './p2pkh.rb'
 
-include Tapyrus
-include Tapyrus::Opcodes
-FEE = 0.00002       # 手数料
-
-Tapyrus.chain_params = :prod
-
-# tapyrus-cli コマンドのフルパス
-Tapyrus_cli ='~/tapyrus-core-0.5.2/bin/tapyrus-cli'
-
-# RPC
-def tapyrusRPC(method,params)
-    r=Open3.capture3("#{Tapyrus_cli} #{method} #{params.join(' ')}")
-    if r[1] == "" then
-        begin
-            return JSON.parse(r[0])
-        rescue JSON::ParserError
-            return r[0]
-        end
-    else
-        return r[1]
-    end
-end
-##################################
 # テスト用アカウントと鍵
 mnemonic = Tapyrus::Mnemonic.new('english')
 word_list =["ozone", "bounce", "hurdle", "weird", "token", "exclude", "remember", "swear", "knife", "bitter", "blossom", "horn", "repair", "aspect", "girl", "merit", "palace", "boring", "pottery", "relax", "sunset", "lucky", "elephant", "ticket"]
@@ -69,146 +43,47 @@ keyAlice = key.derive(1)
 keyBob   = key.derive(2)
 keyCarol = key.derive(3)
 keyDavid = key.derive(4)
+keyErza  = key.derive(5)
+keyFranck = key.derive(6)
 # テスト用の秘密鍵
 priv_alice = keyAlice.priv
 priv_bob   = keyBob.priv
 priv_carol = keyCarol.priv
-priv_david = keyDavid.priv
+priv_erza  = keyErza.priv
+priv_franck = keyFranck.priv
 ## アドレス
 alice = keyAlice.addr
 bob   = keyBob.addr
 carol = keyCarol.addr
 david = keyDavid.addr
+erza  = keyErza.addr
+franck = keyFranck.addr
 # 公開鍵
 pub_alice = keyAlice.pub
 pub_bob   = keyBob.pub
 pub_carol = keyCarol.pub
 pub_david = keyDavid.pub
+pub_erza  = keyErza.pub
+pub_franck = keyFranck.pub
+# 自分のワレットの秘密鍵をインポート
+tapyrusRPC('importprivkey',[keyAlice.key.to_wif])
+tapyrusRPC('importprivkey',[keyBob.key.to_wif])
+tapyrusRPC('importprivkey',[keyCarol.key.to_wif])
+tapyrusRPC('importprivkey',[keyDavid.key.to_wif])
+tapyrusRPC('importprivkey',[keyErza.key.to_wif])
+tapyrusRPC('importprivkey',[keyFranck.key.to_wif])
 ```
 
-### P2PKH送金
+#### P2PKH 送金のテスト 
 
-```ruby
-#####################
-# 基本
-#
-# 送金先アドレス、送金金額，おつりアドレス
-def send_tapyrus(addr, amount, addr_change)
-    # 所持金残高を確認
-    balance = tapyrusRPC('getbalance', [])
-    if balance < (amount+FEE) then
-        puts "error (残高不足)"
-    else
-        # 送金金額＋手数料をぎりぎり上回るUTXOリストの作成
-        utxos = consuming_utxos(amount+FEE)
-        # 送金に使用するUTXOの総額
-        fund = utxos.map{|utxo|utxo["amount"]}.sum
-        # UTXOの総額 - 送金金額 - 手数料 = おつり
-        change = fund-amount-FEE
-        # トランザクションの構成（P2PKH)
-        tx = p2pkh_tx(addr, amount, utxos, change, addr_change)
-        # トランザクションへの署名
-        tx = sign_inputs(utxos, tx)
-        # ビットコインネットワークへのデプロイ
-        return tapyrusRPC('sendrawtransaction', [tx.to_hex])
-    end
-end
-
-# 送金金額＋手数料をぎりぎり上回るUTXOリストの作成
-def consuming_utxos(amount)
-    # ワレットの未使用のUTXOの一覧を得る
-    unspent = tapyrusRPC('listunspent', [])
-    # 消費可能状態のUTXOの選定
-    spendable_utxos = unspent.select{|t|t["spendable"]==true}
-    # UTXOを金額で昇順にソートする
-    sorted_utxos = spendable_utxos.sort_by{|x|x["amount"]}
-    # 少額のUTXOから集めて，指定金額を上回るぎりぎりのUTXOのリストを作成する
-    utxos=[]
-    begin
-        utxos << sorted_utxos.shift
-        balance = utxos.reduce(0){|s,t|s+=t["amount"]}
-    end until balance >= amount
-    return utxos
-end
-
-# トランザクションのinputの構成
-def tx_inputs(tx, utxos)
-    utxos.each{|utxo|
-        # UTXOをinputから参照するための txid と vout としてエンコードする
-        outpoint = Tapyrus::OutPoint.from_txid(utxo["txid"], utxo["vout"])
-        # エンコードした参照をトランザクションのinputに埋め込む
-        tx.in << Tapyrus::TxIn.new(out_point: outpoint)
-    }
-    return tx
-end
-
-# トランザクションのoutputの構成
-def tx_outputs(tx,amount, addr, change, addr_change)
-    # 送金用outputの構成
-    # 金額を satoshiの整数に変換
-    amount_satoshi = (amount*(10**8)).to_i
-    # ビットコインアドレスから p2pkhのscript_pubkey を生成
-    scriptPubKey0 = Tapyrus::Script.parse_from_addr(addr)
-    # エンコードしたscript_pubkeyをトランザクションのoutputに埋め込む
-    tx.out << Tapyrus::TxOut.new(value: amount_satoshi , script_pubkey: scriptPubKey0)
-    # おつり用outputの構成
-    # 金額を satoshiの整数に変換
-    change_satoshi =  (change*(10**8)).to_i
-    # ビットコインアドレスから p2wpkhのscript_pubkey を生成
-    scriptPubKey1 = Tapyrus::Script.parse_from_addr(addr_change)
-    # エンコードしたscript_pubkeyをトランザクションのoutputに埋め込む
-    tx.out << Tapyrus::TxOut.new(value: change_satoshi, script_pubkey: scriptPubKey1)
-    return tx
-end
-
-# P2PKHトランザクションの構成
-def p2pkh_tx(addr,amount, utxos, change, addr_change)
-    # トランザクションのテンプレートの生成
-    tx = Tapyrus::Tx.new
-    # トランザクションのinputの構成
-    tx = tx_inputs(tx,utxos)
-    # トランザクションのoutputの構成
-    tx = tx_outputs(tx,amount, addr, change, addr_change)
-    return tx
-end
-
-# トランザクションへの署名
-def sign_inputs(utxos, tx)
-    utxos.each.with_index{|utxo,index|
-        # UTXOのscriptPubKey をオブジェクト化する
-        script_pubkey = Tapyrus::Script.parse_from_payload(utxo["scriptPubKey"].htb)
-        # scriptPubKey の送金先アドレス
-        myaddr = script_pubkey.to_addr
-        # UTXOの送付先アドレスの秘密鍵（署名鍵）
-        priv = tapyrusRPC('dumpprivkey', [myaddr]).chomp
-        # 署名鍵オブジェクト
-        key = Tapyrus::Key.from_wif(priv)
-        # UTXOの金額
-        satoshi = (utxo["amount"]*(10**8)).to_i
-        case script_pubkey.type
-        when "pubkeyhash"   # UTXOがP2PKHタイプ
-            # トランザクションのハッシュ値を計算
-            sighash = tx.sighash_for_input(index, script_pubkey)
-            # トランザクションへの署名＋署名タイプ情報を付加
-            sig = key.sign(sighash) + [Tapyrus::SIGHASH_TYPE[:all]].pack('C')
-            # inputへの署名の追加
-            tx.in[index].script_sig << sig
-            # inputへの公開鍵の追加
-            tx.in[index].script_sig << key.pubkey.htb
-        end
-    }
-    return tx
-end
-```
-
-
-#### P2PKH 送金のテスト
+ダストになったUTXOをまとめる意味もある
 
 ```ruby
 # 送金の実行。実行結果はトランザクションID
-txid = send_tapyrus(bob, 0.0001, alice).chomp
+txid = send_tapyrus(bob, 0.1)
 ```
 
+## HTLC の作成
 
 ### 秘密情報
 
@@ -276,9 +151,6 @@ OP_IF OP_SHA256 <Secretのハッシュ値> OP_EQUALVERIFY <Bobの公開鍵> OP_E
 # addr_sender 送金者のアドレス
 # pub_receiver 受領者の公開鍵
 # lock_days　ロックする日数
-
-
-
 def send_htlc(amount, addr_change, secret_hash, pub_sender, addr_sender, pub_receiver, lock_days)
     # 所持金残高を確認
     balance = tapyrusRPC('getbalance', [])
@@ -304,8 +176,6 @@ def send_htlc(amount, addr_change, secret_hash, pub_sender, addr_sender, pub_rec
         return tx, txid.chomp, redeem_script.to_hex
     end
 end
-
-
 # p2sh 未署名トランザクションの構成
 def p2sh_tx(utxos, amount, redeem_script, addr_change)
     # おつり = UTXOの総額 - 送金金額 - 手数料
@@ -318,8 +188,6 @@ def p2sh_tx(utxos, amount, redeem_script, addr_change)
     tx = p2sh_outputs(tx, amount, redeem_script, change, addr_change)
     return tx
 end
-
-
 # p2shトランザクションのoutputの構成
 def p2sh_outputs(tx, amount, redeem_script, change, addr_change)
     # satoshi変換
@@ -354,91 +222,7 @@ lock_days =10
 htlc_tx, htlc_txid, redeem_script_hex = send_htlc(amount, addr_change, secret_hash, pub_sender, addr_sender, pub_receiver, lock_days)
 ```
 
-
 ## HTLC アンロックトランザクションの構成
-
-
-共通部分
-
-```ruby
-#  共通部分
-require 'tapyrus'
-require 'json'
-require "open3"
-
-include Tapyrus
-include Tapyrus::Opcodes
-FEE = 0.00002       # 手数料
-
-Tapyrus.chain_params = :prod
-
-# tapyrus-cli コマンドのフルパス
-Tapyrus_cli ='~/tapyrus-core-0.5.1/bin/tapyrus-cli'
-
-# RPC
-def tapyrusRPC(method,params)
-    r=Open3.capture3("#{Tapyrus_cli} #{method} #{params.join(' ')}")
-    if r[1] == "" then
-        begin
-            return JSON.parse(r[0])
-        rescue JSON::ParserError
-            return r[0]
-        end
-    else
-        return r[1]
-    end
-end
-##################################
-# テスト用アカウントと鍵
-mnemonic = Tapyrus::Mnemonic.new('english')
-word_list =["ozone", "bounce", "hurdle", "weird", "token", "exclude", "remember", "swear", "knife", "bitter", "blossom", "horn", "repair", "aspect", "girl", "merit", "palace", "boring", "pottery", "relax", "sunset", "lucky", "elephant", "ticket"]
-seed = mnemonic.to_seed(word_list)
-master_key = Tapyrus::ExtKey.generate_master(seed)
-# derive path 'm/0H'
-key = master_key.derive(0, true)
-#  鍵オブジェクト
-keyAlice = key.derive(1)
-keyBob   = key.derive(2)
-keyCarol = key.derive(3)
-keyDavid = key.derive(4)
-keyErza  = key.derive(5)
-keyFranck = key.derive(6)
-
-# テスト用の秘密鍵
-priv_alice = keyAlice.priv
-priv_bob   = keyBob.priv
-priv_carol = keyCarol.priv
-priv_erza  = keyErza.priv
-priv_franck = keyFranck.priv
-
-## アドレス
-alice = keyAlice.addr
-bob   = keyBob.addr
-carol = keyCarol.addr
-david = keyDavid.addr
-erza  = keyErza.addr
-franck = keyFranck.addr
-
-# 公開鍵
-pub_alice = keyAlice.pub
-pub_bob   = keyBob.pub
-pub_carol = keyCarol.pub
-pub_david = keyDavid.pub
-pub_erza  = keyErza.pub
-pub_franck = keyFranck.pub
-```
-
-### 自分のワレットの秘密鍵をインポートする
-
-```ruby
-tapyrusRPC('importprivkey',[keyAlice.key.to_wif])
-tapyrusRPC('importprivkey',[keyBob.key.to_wif])
-tapyrusRPC('importprivkey',[keyCarol.key.to_wif])
-tapyrusRPC('importprivkey',[keyDavid.key.to_wif])
-tapyrusRPC('importprivkey',[keyErza.key.to_wif])
-tapyrusRPC('importprivkey',[keyFranck.key.to_wif])
-```
-
 
 ### アンロックのためにBobが知っている（べき）情報
 
@@ -486,7 +270,6 @@ def unlock_htlc(htlc_txid, redeem_script_hex, addr, key, secret)
     return p2sh_txid, tx
 end
 ```
-
 
 ### HTLC アンロック
 
