--- a/tapyrus/4.tapyrus script debugger.md
+++ b/tapyrus/4.tapyrus script debugger.md
@@ -1,8 +1,6 @@
 # Tapyrus script debugger
 
-最終更新 2023/07/06 Shigeichiro yamasaki
-
-
+最終更新 2023/07/08 Shigeichiro yamasaki
 
 安土さんがTapyrusスクリプトのデバッガーをつくってくれました．
 ぜひ利用してください
@@ -12,11 +10,191 @@
 
 tapyrus core がインストールされていれば使えます．
 
+```
+$ tapyrus-script-debugger
+Enter scriptPubkey: <Enter your scriptPubkey with hex format>
+Enter scriptSig: <Enter your scriptSig with hex format>
+Enter tx: <Enter your tx, if you have a signature verification opcode, like `OP_CHECKSIG`>
+Enter index of the input: <Enter your input index>
+The Script is ready to be executed; 
+you can step execution it by putting the Enter key.
+> 
+```
+
+[bitcoin scriptの仕様](https://en.bitcoin.it/wiki/Script)
+
+[Tapyrus script の仕様](https://github.com/chaintope/tapyrus-core/blob/master/doc/tapyrus/script.md)
+
 ### tapyrusrb でデバッグしたいスクリプトを得る
 
 ```bash
 irb
 ```
+
+Ruby インタープリタで実行
+
+```ruby
+require 'tapyrus'
+include Tapyrus
+include Tapyrus::Opcodes
+
+# サンプルスクリプト
+#  3 + 4 = 7 の確認
+
+script=Tapyrus::Script.new << OP_3 << OP_4 <<  OP_ADD << OP_7 << OP_EQUAL
+# 3 + 4 = 7 が成功することの確認
+script.run
+=> true
+```
+
+#### script_pubkey と script_sig に分割する
+
+3 と + 4 = 7 に分割
+
+```ruby
+# + 4 = 7  でロックされている
+script_pubkey=(Tapyrus::Script.new << OP_4 <<  OP_ADD << OP_7 << OP_EQUAL).to_hex
+=> "54935787"
+
+# 3  でロックを解除する
+script_sig=(Tapyrus::Script.new << OP_3).to_hex
+=> "53"
+```
+
+##### tapyrus-script-debugger
+
+shell から実行
+
+この場合，tx や index は指定しないので， enter を入れればよい
+
+```bash
+$ tapyrus-script-debugger
+Enter scriptPubkey: 54935787
+4 OP_ADD 7 OP_EQUAL
+Enter scriptSig: 53
+3
+Enter tx: 
+The Script is ready to be executed; you can step execution it by putting the Enter key.
+> 
+APPLY 3
++---------------+
+| Current Stack |
++---------------+
+| 03            |
++---------------+
+> 
+APPLY 4
++---------------+
+| Current Stack |
++---------------+
+| 04            |
+| 03            |
++---------------+
+> 
+APPLY OP_ADD
++---------------+
+| Current Stack |
++---------------+
+| 07            |
++---------------+
+> 
+APPLY 7
++---------------+
+| Current Stack |
++---------------+
+| 07            |
+| 07            |
++---------------+
+> 
+APPLY OP_EQUAL
++---------------+
+| Current Stack |
++---------------+
+| 01            |
++---------------+
+> 
+Execution finished.
+```
+
+
+### secret hash の場合
+
+ハッシュの原像を入れるとロックが解除される
+
+```ruby
+# 原像
+secret='HTLC_test'
+# ハッシュ値
+secret_hash=Tapyrus.sha256(secret)
+# ハッシュ値の検証 secret_hash = SHA256(secret)
+ts=Tapyrus::Script.new << secret.bth << OP_SHA256 << secret_hash << OP_EQUAL
+ts.run
+=> true
+```
+
+#### script_pubkey と script_sig に分割する
+
+
+```ruby
+# secret_hash = SHA256(X)
+script_pubkey=(Tapyrus::Script.new  << OP_SHA256 << secret_hash << OP_EQUAL).to_hex
+=> "a820996bf59473947d9906275f427ecb318371514db2ffb8e9d8517b5e45cb65e35787"
+
+# secret
+script_sig =(Tapyrus::Script.new  <<  secret.bth).to_hex
+=> "0948544c435f74657374"
+```
+
+##### tapyrus-script-debugger
+
+shell から実行
+
+この場合，tx や index は指定しないので， enter を入れればよい
+
+```bash
+$ tapyrus-script-debugger
+Enter scriptPubkey: a820996bf59473947d9906275f427ecb318371514db2ffb8e9d8517b5e45cb65e35787
+OP_SHA256 996bf59473947d9906275f427ecb318371514db2ffb8e9d8517b5e45cb65e357 OP_EQUAL
+Enter scriptSig: 0948544c435f74657374
+48544c435f74657374
+Enter tx: 
+The Script is ready to be executed; you can step execution it by putting the Enter key.
+> 
+PUSH 48544c435f74657374
++--------------------+
+|   Current Stack    |
++--------------------+
+| 48544c435f74657374 |
++--------------------+
+> 
+APPLY OP_SHA256
++------------------------------------------------------------------+
+|                          Current Stack                           |
++------------------------------------------------------------------+
+| 996bf59473947d9906275f427ecb318371514db2ffb8e9d8517b5e45cb65e357 |
++------------------------------------------------------------------+
+> 
+PUSH 996bf59473947d9906275f427ecb318371514db2ffb8e9d8517b5e45cb65e357
++------------------------------------------------------------------+
+|                          Current Stack                           |
++------------------------------------------------------------------+
+| 996bf59473947d9906275f427ecb318371514db2ffb8e9d8517b5e45cb65e357 |
+| 996bf59473947d9906275f427ecb318371514db2ffb8e9d8517b5e45cb65e357 |
++------------------------------------------------------------------+
+> 
+APPLY OP_EQUAL
++---------------+
+| Current Stack |
++---------------+
+| 01            |
++---------------+
+> 
+Execution finished.
+```
+
+### トランザクションの署名を含むスクリプトの検証
+
+OP_CHECKSIG などを含む場合
 
 ```ruby
 script_pubkey = locked_tx.out[0].script_pubkey.to_hex
@@ -30,9 +208,10 @@ tx = unlock_tx.to_hex
 ```
 
 ### tapyrus-script-debugger の実行
+
 シェルから 16進数形式でデータを入力する
 
-scriptPubkey と scriptSig と tx のヘキサ形式を入手しておく
+scriptPubkey と scriptSig と tx の16進形式が必要
 
 ```bash
 tapyrus-script-debugger
