--- a/tapyrus/4.tapyrus script debugger.md
+++ b/tapyrus/4.tapyrus script debugger.md
@@ -132,6 +132,58 @@ ts.run
 => true
 ```
 
+#### スクリプトを分割せずに実行してみる
+
+Ruby
+
+```ruby
+ts.to_hex
+=> "0948544c435f74657374a820996bf59473947d9906275f427ecb318371514db2ffb8e9d8517b5e45cb65e35787"
+```
+
+shellから
+
+```bash
+$ tapyrus-script-debugger
+Enter scriptPubkey: 0948544c435f74657374a820996bf59473947d9906275f427ecb318371514db2ffb8e9d8517b5e45cb65e35787
+48544c435f74657374 OP_SHA256 996bf59473947d9906275f427ecb318371514db2ffb8e9d8517b5e45cb65e357 OP_EQUAL
+Enter scriptSig: 
+Enter tx: 
+The Script is ready to be executed; you can step execution it by putting the Enter key.
+> 
+PUSH 48544c435f74657374
++--------------------+
+|   Current Stack    |
++--------------------+
+| 48544c435f74657374 |
++--------------------+
+> 
+APPLY OP_SHA256
++------------------------------------------------------------------+
+|                          Current Stack                           |
++------------------------------------------------------------------+
+| 996bf59473947d9906275f427ecb318371514db2ffb8e9d8517b5e45cb65e357 |
++------------------------------------------------------------------+
+> 
+PUSH 996bf59473947d9906275f427ecb318371514db2ffb8e9d8517b5e45cb65e357
++------------------------------------------------------------------+
+|                          Current Stack                           |
++------------------------------------------------------------------+
+| 996bf59473947d9906275f427ecb318371514db2ffb8e9d8517b5e45cb65e357 |
+| 996bf59473947d9906275f427ecb318371514db2ffb8e9d8517b5e45cb65e357 |
++------------------------------------------------------------------+
+> 
+APPLY OP_EQUAL
++---------------+
+| Current Stack |
++---------------+
+| 01            |
++---------------+
+> 
+
+```
+
+
 #### script_pubkey と script_sig に分割する
 
 
