--- a/tapyrus/5.tapyrusrb-HTLC.md
+++ b/tapyrus/5.tapyrusrb-HTLC.md
@@ -28,9 +28,10 @@ OP_CHECKSIG
 
 3.tapyrusrb-P2SH と同じ
 
-```ruby
-require './p2pkh.rb'
 
+```ruby
+# 共通ライブラリ
+require './tpcommon.rb'
 # テスト用アカウントと鍵
 mnemonic = Tapyrus::Mnemonic.new('english')
 word_list =["ozone", "bounce", "hurdle", "weird", "token", "exclude", "remember", "swear", "knife", "bitter", "blossom", "horn", "repair", "aspect", "girl", "merit", "palace", "boring", "pottery", "relax", "sunset", "lucky", "elephant", "ticket"]
