--- a/tapyrus/2.tapyrusrb.md
+++ b/tapyrus/2.tapyrusrb.md
@@ -1,8 +1,14 @@
 # tapyrusrb
 
-最終更新 2023/07/06 Shigeichiro Yamasaki
+最終更新 2023/07/11 Shigeichiro Yamasaki
 
 Tapyrus API をRuby から操作する rubygemsの基本
+
+## 事前
+
+Tapyrus core と Ruby をインストールしておく
+
+[ruby のインストール](../ruby)
 
 ## tapyrusrb WiKi
 
