--- a/bitcoin/0.bitcoin-core-signet.md
+++ b/bitcoin/0.bitcoin-core-signet.md
@@ -1,6 +1,6 @@
 # 0. Bitcoin core Signet ノードの構築
 
-2023/05/09  更新 Shigeichiro Yamasaki 
+2024/03/14  更新 Shigeichiro Yamasaki 
 
 
 ## install 方法
@@ -34,16 +34,6 @@ bitcon coreは「危険なアプリ」という扱いになっています。
 sudo snap install bitcoin-core
 ```
 
-#### bitcoin-qt アプリを起動してみる
-
-リモート起動はできません
-
-```
-bitcoin-core.qt
-```
-
-ファイルメニューでアプリをプロセスを終了させる
-
 #### bitcoind を起動してみる
 
 
@@ -51,7 +41,7 @@ bitcoin-core.qt
 bitcoin-core.daemon 
 ```
 
-<control>-c でプロセスを終了させる
+`<control>`-c でプロセスを終了させる
 
 #### snap で bitcoin core をインストールしたときのコマンドインターフェース
 
@@ -119,6 +109,7 @@ bitcoin-core.daemon &
 ```
 同期が完了するまで時間がかかります
 
+
 ## 同期状態の確認
 
 同期したブロック高
@@ -127,7 +118,7 @@ bitcoin-core.daemon &
 bitcoin-core.cli getblockcount
 ```
 
- ブロックチェーンの同期にはすこし時間がかかります.
+ブロックチェーンの同期が完了するまでブロック高は少しずつ増えていきます。
 マシンの性能に依存しますが，最近の一般的な性能のマシンならsignet の場合30分程度でしょう．
 
 ## bitcoinワレットの作成
@@ -135,15 +126,11 @@ bitcoin-core.cli getblockcount
 bitcoin-core には bitcoin ワレットの機能があります．
 bitcoinを受領したり送金したりするためにはワレットが必要です．
 
-### レガシーワレットの作成
-
-学習用に古い仕様のワレットを使用します．（新しい仕様のワレットは安全性が高くなっていますが，秘密鍵の取り出しなどができません）
-
 ここではワレット名を alice としています．
 自分の名前などに変更することができます．
 
 ```bash
-bitcoin-core.cli -named createwallet wallet_name=alice descriptors=false
+bitcoin-core.cli -named createwallet wallet_name=alice 
 ```
 
 ### ワレットの情報が格納されている場所
@@ -171,13 +158,15 @@ tb1qa0gknzlqcx2mz54myqvxl8ev3h2w6lswqw4gvj
 
 ★ 一つのワレットの中に，アドレスはいくつでも生成することができます．
 
-## テスト用コインの入手
+## 生成したアドレスへのテスト用コインの入手
 
-以下のURLから signet ネットワークの bitcoin （無料）を入手できます．
+生成したアドレスを宛先にしてsignetの bitcoin を受け取ることができます。
+
+以下のURLから signet ネットワークの bitcoin （無料）を入手できます．受け取れる金額は最大で 0.01 BTCです。
 ただし，同じグローバルIPアドレスからは24時間に1回しか受け取ることができません．
 大学などのネットワーク環境では全員が一つのグローバルIPアドレスを共有しているので，24時間に一人しか受け取ることができません．
 自宅などからトライしてください．
 
-[https://signet.bc-2.jp/](https://signet.bc-2.jp/)
+[https://signetfaucet.com/](https://signetfaucet.com/)
 
 
