--- a/bitcoin/2.bitcoin-core-details.md
+++ b/bitcoin/2.bitcoin-core-details.md
@@ -1,11 +1,11 @@
 # 2. bitcoin core の詳細
 
-2023/05/09  更新 Shigeichiro Yamasaki
+2024/03/15  更新 Shigeichiro Yamasaki
 
 ## ビットコイン開発コミュニティとBIP
 
-* [メーリングリスト bitcoin-devZ](https://lists.linuxfoundation.org/mailman/listinfo/bitcoin-dev)
-* [Slack: https://bitcoincore.slack.com/](Slack: https://bitcoincore.slack.com/)
+* [メーリングリスト bitcoin-dev](https://lists.linuxfoundation.org/mailman/listinfo/bitcoin-dev)
+* [Slack: https://bitcoincore.slack.com/](https://bitcoincore.slack.com/)
 * [BIP](https://github.com/bitcoin/bips)
 
 ## 一連の流れで演習します
@@ -24,10 +24,12 @@
 
 1. faucetから得たUTXOをinputとして6個のoutputを持つトランザクション (TX1) を作成し，署名して，ブロードキャストする
 
-2. ５個のUTXOを利用して，P2PK, P2PKH, P2SH, P2WPKH, P2WSH の５つのタイプのoutputを持つ5個のトランザクション(TX2 ~ TX6) を作成し，それぞれ署名して，ブロードキャストする
+2. 5個のUTXOを利用して，P2PK, P2PKH, P2SH, P2WPKH, P2WSH の5つのタイプのoutputを持つ5個のトランザクション(TX2 ~ TX6) を作成し，それぞれ署名して，ブロードキャストする
+
     ★ P2PK のoutput を持つトランザクションの作成はバイナリ形式で作成する必要があります
 
-3. 5個のタイプの異なるUTXOをinputとするトランザクション (TX7) を作成
+3. 5個のタイプの異なるUTXOをinputとするトランザクション (TX7) を作成する
+
     ★ P2SH, P2WSH のUTXOをワレットに認識させる必要があります。
 
 4. トランザクション(TX7)に署名してブロードキャスト
